| Priyanshu | added missing translation for gujarati

--- a/locales/gu.json
+++ b/locales/gu.json
@@ -85,7 +85,7 @@
 	"Get started by clicking on <b>Record</b> button": "<b>રેકોર્ડ</b> બટન પર ક્લિક કરીને શરૂ કરો",
 	"Report": "રિપોર્ટ",
 	"Test your Microphone and Speakers": "તમારું માઇક્રોફોન અને સ્પીકર્સ તપાસો",
-	"Please speak clearly": "Please speak clearly",
+	"Please speak clearly": "કૃપા કરી ને સ્પષ્ટ બોલો",
 	"Low/No Background Noise": "પૃષ્ઠભૂમિમાં નિમ્ન અવાજ/બિલકુલ અવાજ નહીં",
 	"Background Noise Detected": "પાછળ કોઇ અવાજ મળી આવ્યો છે",
 	"Let's get started!": "ચાલો શરૂ કરીએ!",
