|Soujyo| update ASSAMESE tags

--- a/locales/as.json
+++ b/locales/as.json
@@ -240,5 +240,44 @@
 	"Validate What They Say": "Validate What They Say",
 	"Help us by validating the recordings that others have contributed": "Help us by validating the recordings that others have contributed",
 	"Bolo India: A crowdsourcing initiative for Indian languages": "Bolo India: A crowdsourcing initiative for Indian languages",
-	"India needs to be Aatmanirbhar in the area of speech recognition in Indian languages.  Hence, we want to create an open data repository of many Indian voices. Bolo India invites you to volunteer contribute your voice for this cause.": "India needs to be Aatmanirbhar in the area of speech recognition in Indian languages.  Hence, we want to create an open data repository of many Indian voices. Bolo India invites you to volunteer contribute your voice for this cause."
+	"India needs to be Aatmanirbhar in the area of speech recognition in Indian languages.  Hence, we want to create an open data repository of many Indian voices. Bolo India invites you to volunteer contribute your voice for this cause.": "India needs to be Aatmanirbhar in the area of speech recognition in Indian languages.  Hence, we want to create an open data repository of many Indian voices. Bolo India invites you to volunteer contribute your voice for this cause.",
+	"India needs to be Atma Nirbhar in the area of speech recognition in Indian languages. Hence, we want to create an open data repository of many Indian voices. This is an effort by MeitY, Government of India, under the National Language Translation Mission (NLTM). This effort is supported by EkStep Foundation on a pro-bono basis and leverages its open source work under <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> along with various other open source frameworks.": "India needs to be Atma Nirbhar in the area of speech recognition in Indian languages. Hence, we want to create an open data repository of many Indian voices. This is an effort by MeitY, Government of India, under the National Language Translation Mission (NLTM). This effort is supported by EkStep Foundation on a pro-bono basis and leverages its open source work under <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> along with various other open source frameworks.",
+	"Bolo India invites you to volunteer and contribute your voice for this cause. All your contributions are automatically processed and made available as open data in a useful fashion back to the community. Such data then can be used by all language enthusiasts and technologists to develop world class speech recognition applications.": "Bolo India invites you to volunteer and contribute your voice for this cause. All your contributions are automatically processed and made available as open data in a useful fashion back to the community. Such data then can be used by all language enthusiasts and technologists to develop world class speech recognition applications.",
+	"India is a land of many languages, our digital strategy must reflect it.": "India is a land of many languages, our digital strategy must reflect it.",
+	"90% of India's population uses region languages to conduct their day-to-day activities.": "90% of India's population uses region languages to conduct their day-to-day activities.",
+	"As more and more people use digital platforms for financial, educational and social activities, digital platforms must work seamlessly in Indian Languages.": "As more and more people use digital platforms for financial, educational and social activities, digital platforms must work seamlessly in Indian Languages.",
+	"We need to build speech recognition technologies that are tuned for your language.  It must have high accuracy and understand the daily language and communications of people in your language.": "We need to build speech recognition technologies that are tuned for your language.  It must have high accuracy and understand the daily language and communications of people in your language.",
+	"Having open world class speech recognition in your language will enable a digital first model in your language in various sectors such as: education, healthcare and media.": "Having open world class speech recognition in your language will enable a digital first model in your language in various sectors such as: education, healthcare and media.",
+	"The tools, utilities and models  proposed to be developed in your language will rely on open source contributions through Bolo India crowd sourcing platform": "The tools, utilities and models  proposed to be developed in your language will rely on open source contributions through Bolo India crowd sourcing platform",
+	"Speech recognition relies on \"machine-learning\" technology that requires large datasets that include diverse voices and the corresponding text. Through Bolo India, we want to create a diverse open repository of Indian voices speaking Indian languages which can be used for this initiative": "Speech recognition relies on \"machine-learning\" technology that requires large datasets that include diverse voices and the corresponding text. Through Bolo India, we want to create a diverse open repository of Indian voices speaking Indian languages which can be used for this initiative",
+	"We are inviting you to join us and voluntarily contribute your voice to this initiative. Recording your voice at one stretch can be overwhelming hence you can do this by visiting the website multiple times and commence from where you left us off": "We are inviting you to join us and voluntarily contribute your voice to this initiative. Recording your voice at one stretch can be overwhelming hence you can do this by visiting the website multiple times and commence from where you left us off",
+	"Select a language": "Select a language",
+	"START CONTRIBUTING": "START CONTRIBUTING",
+	"Gender Distribution": "Gender Distribution",
+	"Report": "Report",
+	"Report Content": "Report Content",
+	"Help us understand what’s wrong with the sentence": "Help us understand what’s wrong with the sentence",
+	"Offensive": "Offensive",
+	"Hurting sentiments of religion, community or abusive content etc.": "Hurting sentiments of religion, community or abusive content etc.",
+	"Prohibited Content": "Prohibited Content",
+	"Hateful / Discriminatory / Vulgar language, drugs promotion etc.": "Hateful / Discriminatory / Vulgar language, drugs promotion etc.",
+	"Political Statement": "Political Statement",
+	"Hateful Political views, amplifying hate-speech etc.": "Hateful Political views, amplifying hate-speech etc.",
+	"Misinformation": "Misinformation",
+	"Hearsay / Rumors, deliberate falsified facts etc.": "Hearsay / Rumors, deliberate falsified facts etc.",
+	"Please specify the reason (Optional)": "Please specify the reason (Optional)",
+	"SUBMIT": "SUBMIT",
+	"Thank You": "Thank You",
+	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback.": "Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback.",
+	"Most Contributed - <span id=\"languageId\"></span>": "Most Contributed - <span id=\"languageId\"></span>",
+	"Thank you for your enthusiasm to validate the recordings.": "Thank you for your enthusiasm to validate the recordings.",
+	"We do not have any data in <span id=\"spn-validation-language\"></span> language. Please try again later.": "We do not have any data in <span id=\"spn-validation-language\"></span> language. Please try again later.",
+	"Start Contributing in <span id=\"start-validation-language\"></span>": "Start Contributing in <span id=\"start-validation-language\"></span>",
+	"Subject": "Subject",
+	"Description": "Description",
+	"Please type here...": "Please type here...",
+	"Failed to submit the feedback. Please try again.": "Failed to submit the feedback. Please try again.",
+	"Thank You for your valuable feedback": "Thank You for your valuable feedback",
+	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback": "Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback",
+	"Back to Home": "Back to Home"
 }
