|Soujyo| Update and fix assamese locale

--- a/locales/as.json
+++ b/locales/as.json
@@ -230,14 +230,14 @@
 	"Congratulations!!! You have completed this batch of sentences": "অভিনন্দন!!! আপুনি বাক্যৰ এই গোটটো সম্পূৰ্ণ কৰিছে",
 	"Most data recorded for <span id=\"languageId\"></span>": "সৰ্বাধিক অৱদান  <span id=\"languageId\"></span>",
 	"Data recorded for <span id=\"languageChoiceId\"></span>": "<span id=\"languageChoiceId\"></span> ৰ বাবে বাণীবদ্ধ কৰা তথ্য",
-	"Please speak clearly": "Please speak clearly",
+	"Please speak clearly": "অনুগ্ৰহ কৰি স্পষ্টকৈ কওঁক",
 	"Low/No Background Noise": "Low/No Background Noise",
 	"Background Noise Detected": "পিছৰফালে কোলাহল শুনা গৈছে",
 	"social sharing text with rank": "মই http://boloindia.nplt.in ত ভাৰতৰ বাবে মুক্ত ভাষাৰ ভাণ্ডাৰ নিৰ্মাণত অবদান আগবঢ়াইছো৷ আপুনি আৰু মই আমাৰ কণ্ঠদান কৰি এটা পাৰ্থক্য সৃষ্টি কৰিব পাৰোঁ যিয়ে যন্ত্ৰবোৰক আমাৰ ভাষা শিকিবলৈ সহায় কৰিব পাৰে। বোলো ইণ্ডিয়াত আমাৰ %language ভাষাৰ স্থান %rank। আপোনাৰ অংশটো কৰি ভাষাটো শক্তিশালী কৰক?",
 	"social sharing text without rank": "মই http://boloindia.nplt.in ত ভাৰতৰ বাবে মুক্ত ভাষাৰ ভাণ্ডাৰ নিৰ্মাণত অবদান আগবঢ়াইছো৷ আপুনি আৰু মই আমাৰ কণ্ঠদান কৰি এটা পাৰ্থক্য সৃষ্টি কৰিব পাৰোঁ যিয়ে যন্ত্ৰবোৰক আমাৰ ভাষা শিকিবলৈ সহায় কৰিব পাৰে। আপোনাৰ অংশটো কৰি ভাষাটো শক্তিশালী কৰক?",
 	"Select the language for voluntary contribution": "অৱদান কৰিবৰ বাবে ভাষাটো নিৰ্বাচন কৰক",
-	"Speak": "Speak",
-	"Validate What They Say": "শুনক: তেওঁলোকে কোৱা কথাবোৰ মূল্যাংকন কৰক",
+	"Speak": "কওঁক",
+	"Validate What They Say": "তেওঁলোকে কোৱা কথাবোৰ মূল্যাংকন কৰক",
 	"Help us by validating the recordings that others have contributed": "আনসকলে অৱদান দিয়া কণ্ঠৰ নমুনাবোৰ মূল্যাংকন কৰি আমাক সহায় কৰক",
 	"Bolo India: A crowdsourcing initiative for Indian languages": "বোলো ইণ্ডিয়া: ভাৰতীয় ভাষাসমূহৰ বাবে এক বহু ব্যাক্তিকেন্দ্ৰিক পদক্ষেপ",
 	"India needs to be Aatmanirbhar in the area of speech recognition in Indian languages.  Hence, we want to create an open data repository of many Indian voices. Bolo India invites you to volunteer contribute your voice for this cause.": " ভাৰতীয় ভাষাত ভাষণ স্বীকৃতিৰ ক্ষেত্ৰত ভাৰত আত্মনিৰ্ভৰ হোৱাৰ প্ৰয়োজন আছে। সেয়েহে, আমি বহুতো ভাৰতীয় কণ্ঠৰ এটা মুক্ত তথ্যৰ ভড়াল সৃষ্টি কৰিব বিচাৰো।এই উদ্দেশ্যত বোলো ইণ্ডিয়াই আপোনাক স্বেচ্ছাসেৱক হৈ আপোনাৰ কণ্ঠস্বৰ অৱদান দিবলৈ আমন্ত্ৰণ জনাইছে।",
@@ -267,7 +267,7 @@
 	"The tools, utilities and models  proposed to be developed in your language will rely on open source contributions through Bolo India crowd sourcing platform": "আপোনাৰ ভাষাত বিকশিত হ'ব লগা সঁজুলি, ব্যৱহা্ৰযোগ্য আৰু আৰ্হিবোৰ বোলো ইণ্ডিয়া বহু ব্যাক্তিকেন্দ্ৰিক মাধ্যমৰ জৰিয়তে মুক্ত উৎসৰ অৱদানৰ ওপৰত নিৰ্ভৰ কৰিব",
 	"Speech recognition relies on \"machine-learning\" technology that requires large datasets that include diverse voices and the corresponding text. Through Bolo India, we want to create a diverse open repository of Indian voices speaking Indian languages which can be used for this initiative": "ভাষণ চিনাক্তকৰণ \"মেচিন লাৰ্নিং\" প্ৰযুক্তিৰ ওপৰত নিৰৰ্ভশীল সেয়েহে ইয়াত এক বৃহৎ সংখ্যক ডাটাচেট লাগে, য'ত বিভিন্ন ভাৰতীয় ভাষাৰ কন্ঠ আৰু পাঠ্য দুয়োটাই অন্তৰ্ভূক্ত হৈ থাকে। বোলো ইণ্ডিয়াৰ যোগেদি, একষ্টেপে এনেকুৱা বিবিধ কথিত ভাৰতীয় ভাষাৰ মুক্ত উৎস সৃষ্টি কৰিব বিচাৰিছে যিটো নেকি উদ্যোক্তাসকলৰ লগতে আনেও এই পদক্ষেপত ব্যৱহাৰ কৰিব পাৰিব।",
 	"We are inviting you to join us and voluntarily contribute your voice to this initiative. Recording your voice at one stretch can be overwhelming hence you can do this by visiting the website multiple times and commence from where you left us off": "আমি আপোনাক আমাৰ সৈতে যোগদান কৰিবলৈ আমন্ত্ৰণ কৰি আছো আৰু স্বেচ্ছায়ে এই উদ্যোগত আপোনাৰ কণ্ঠস্বৰৰ অৰিহণা বিচাৰিছো। একে গতিত সম্পূৰ্ণভাৱে আপোনালোকৰ কন্ঠ ৰেকৰ্ড কৰাটো আপোনালোকৰ বাবে অত্যাধিক যেন লাগিব পাৰে সেয়েহে, আমি আমাৰ ৱেবচাইটত ক্ষুদ্ৰ ভাগত বিভক্ত কৰাৰ উপায় কৰি ৰাখিছোঁ, যাতে আপোনালোকে একাধিকবাৰ দৰ্শন কৰিব পাৰে আৰু যিখিনিত এৰি গৈছিল তাৰ পৰা আকৌ আৰম্ভ কৰিব পাৰে।",
-	"Thank You": "Thank You",
+	"Thank You": "ধন্যবাদ",
 	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback.": "Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback.",
 	"Most Contributed - <span id=\"languageId\"></span>": "সৰ্বাধিক অৱদান - <span id=\"languageId\"></span>",
 	"Thank you for your enthusiasm to validate the recordings.": "বাণীবদ্ধবোৰ বৈধকৰণ কৰিবলৈ আপোনাৰ উৎসাহৰ বাবে আপোনাক ধন্যবাদ।",
@@ -278,6 +278,5 @@
 	"Please type here...": "Please type here...",
 	"Failed to submit the feedback. Please try again.": "Failed to submit the feedback. Please try again.",
 	"Thank You for your valuable feedback": "Thank You for your valuable feedback",
-	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback": "Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback",
 	"Back to Home": "Back to Home"
 }
