--- a/locales/as.json
+++ b/locales/as.json
@@ -231,18 +231,18 @@
 	"Most data recorded for <span id=\"languageId\"></span>": "সৰ্বাধিক অৱদান  <span id=\"languageId\"></span>",
 	"Data recorded for <span id=\"languageChoiceId\"></span>": "<span id=\"languageChoiceId\"></span> ৰ বাবে বাণীবদ্ধ কৰা তথ্য",
 	"Please speak clearly": "অনুগ্ৰহ কৰি স্পষ্টকৈ কওঁক",
-	"Low/No Background Noise": "Low/No Background Noise",
+	"Low/No Background Noise": "পিছফালৰ শব্দ নিম্ন/ নাই",
 	"Background Noise Detected": "পিছৰফালে কোলাহল শুনা গৈছে",
 	"social sharing text with rank": "মই http://boloindia.nplt.in ত ভাৰতৰ বাবে মুক্ত ভাষাৰ ভাণ্ডাৰ নিৰ্মাণত অবদান আগবঢ়াইছো৷ আপুনি আৰু মই আমাৰ কণ্ঠদান কৰি এটা পাৰ্থক্য সৃষ্টি কৰিব পাৰোঁ যিয়ে যন্ত্ৰবোৰক আমাৰ ভাষা শিকিবলৈ সহায় কৰিব পাৰে। বোলো ইণ্ডিয়াত আমাৰ %language ভাষাৰ স্থান %rank। আপোনাৰ অংশটো কৰি ভাষাটো শক্তিশালী কৰক?",
 	"social sharing text without rank": "মই http://boloindia.nplt.in ত ভাৰতৰ বাবে মুক্ত ভাষাৰ ভাণ্ডাৰ নিৰ্মাণত অবদান আগবঢ়াইছো৷ আপুনি আৰু মই আমাৰ কণ্ঠদান কৰি এটা পাৰ্থক্য সৃষ্টি কৰিব পাৰোঁ যিয়ে যন্ত্ৰবোৰক আমাৰ ভাষা শিকিবলৈ সহায় কৰিব পাৰে। আপোনাৰ অংশটো কৰি ভাষাটো শক্তিশালী কৰক?",
-	"Select the language for voluntary contribution": "অৱদান কৰিবৰ বাবে ভাষাটো নিৰ্বাচন কৰক",
+	"Select the language for voluntary contribution": "স্ব-ইচ্ছাই অৱদান কৰাৰ বাবে ভাষা বাছনি কৰক",
 	"Speak": "কওঁক",
-	"Validate What They Say": "তেওঁলোকে কোৱা কথাবোৰ মূল্যাংকন কৰক",
+	"Validate What They Say": "তেওঁলোকে কি কয় সেয়া বৈধকৰণ কৰক",
 	"Help us by validating the recordings that others have contributed": "আনসকলে অৱদান দিয়া কণ্ঠৰ নমুনাবোৰ মূল্যাংকন কৰি আমাক সহায় কৰক",
 	"Bolo India: A crowdsourcing initiative for Indian languages": "বোলো ইণ্ডিয়া: ভাৰতীয় ভাষাসমূহৰ বাবে এক বহু ব্যাক্তিকেন্দ্ৰিক পদক্ষেপ",
 	"India needs to be Aatmanirbhar in the area of speech recognition in Indian languages.  Hence, we want to create an open data repository of many Indian voices. Bolo India invites you to volunteer contribute your voice for this cause.": " ভাৰতীয় ভাষাত ভাষণ স্বীকৃতিৰ ক্ষেত্ৰত ভাৰত আত্মনিৰ্ভৰ হোৱাৰ প্ৰয়োজন আছে। সেয়েহে, আমি বহুতো ভাৰতীয় কণ্ঠৰ এটা মুক্ত তথ্যৰ ভড়াল সৃষ্টি কৰিব বিচাৰো।এই উদ্দেশ্যত বোলো ইণ্ডিয়াই আপোনাক স্বেচ্ছাসেৱক হৈ আপোনাৰ কণ্ঠস্বৰ অৱদান দিবলৈ আমন্ত্ৰণ জনাইছে।",
-	"India needs to be Atma Nirbhar in the area of speech recognition in Indian languages. Hence, we want to create an open data repository of many Indian voices. This is an effort by MeitY, Government of India, under the National Language Translation Mission (NLTM). This effort is supported by EkStep Foundation on a pro-bono basis and leverages its open source work under <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> along with various other open source frameworks.": "ভাৰতীয় ভাষাত ভাষণ স্বীকৃতিৰ ক্ষেত্ৰত ভাৰত আত্মনিৰ্ভৰ হোৱাৰ প্ৰয়োজন আছে। সেয়েহে, আমি বহুতো ভাৰতীয় কণ্ঠৰ এটা মুক্ত তথ্যৰ ভড়াল সৃষ্টি কৰিব বিচাৰো।এই উদ্দেশ্যত বোলো ইণ্ডিয়াই আপোনাক স্বেচ্ছাসেৱক হৈ আপোনাৰ কণ্ঠস্বৰ অৱদান দিবলৈ আমন্ত্ৰণ জনাইছে।",
-	"Bolo India invites you to volunteer and contribute your voice for this cause. All your contributions are automatically processed and made available as open data in a useful fashion back to the community. Such data then can be used by all language enthusiasts and technologists to develop world class speech recognition applications.": "এই মুক্ত তথ্য সকলো ভাষাৰ প্ৰতি উৎসাহী আৰু প্ৰযুক্তিবিদসকলে বিশ্বমানৰ ভাষণ চিনাক্তকৰণ এপ্লিকেচন বিকাশ কৰিবলৈ ব্যৱহাৰ কৰিব পাৰে।",
+	"India needs to be Atma Nirbhar in the area of speech recognition in Indian languages. Hence, we want to create an open data repository of many Indian voices. This is an effort by MeitY, Government of India, under the National Language Translation Mission (NLTM). This effort is supported by EkStep Foundation on a pro-bono basis and leverages its open source work under <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> along with various other open source frameworks.": "ভাৰতীয় ভাষাত ভাষণ স্বীকৃতিৰ ক্ষেত্ৰত ভাৰতবৰ্ষ আত্মনিৰ্ভৰ হোৱাৰ প্ৰয়োজন আছে। সেয়েহে, আমি বহুতো ভাৰতীয় কণ্ঠৰ এটা মুক্ত তথ্যৰ ভড়াল সৃষ্টি কৰিব বিচাৰো। এইটো ৰাষ্ট্ৰীয় ভাষা অনুবাদ মিছন (এনএলটিএম) ৰ অধীনত ভাৰত চৰকাৰৰ মে ই টি ৱাই ৰ দ্বাৰা কৰা এক প্ৰচেষ্টা। এই প্ৰচেষ্টাটো একষ্টেপ ফাউণ্ডেচনে বিনা বেতনৰ আধাৰত সমৰ্থন কৰে আৰু অন্যান্য মুক্ত উৎস ৰ কাৰ্য্যসমূহৰ সৈতে <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> ৰ অধীনত ইয়াৰ মুক্ত উৎসৰ কাম ব্যৱহাৰ কৰে।",
+	"Bolo India invites you to volunteer and contribute your voice for this cause. All your contributions are automatically processed and made available as open data in a useful fashion back to the community. Such data then can be used by all language enthusiasts and technologists to develop world class speech recognition applications.": "বোলো ইণ্ডিয়াই আপোনাক স্বেচ্ছাসেৱক হ'বলৈ আৰু এই উদ্দেশ্যত আপোনাৰ কণ্ঠস্বৰ অৱদান দিবলৈ আমন্ত্ৰণ জনাইছে। আপোনাৰ সকলো অৱদান স্বয়ংক্ৰিয়ভাৱে প্ৰক্ৰিয়া কৰা হ'ব আৰু জনসম্প্ৰদায়লৈ এটা উপযোগী ধৰণত মুক্ত তথ্য হিচাপে উপলব্ধ কৰা হযব।এই মুক্ত তথ্য সকলো ভাষাৰ প্ৰতি উৎসাহী আৰু প্ৰযুক্তিবিদসকলে বিশ্বমানৰ ভাষণ চিনাক্তকৰণ এপ্লিকেচন বিকাশ কৰিবলৈ ব্যৱহাৰ কৰিব পাৰে। ",
 	"Select a language": "এটা ভাষা বাচনি কৰক",
 	"START CONTRIBUTING": "অৱদান আৰম্ভ কৰক",
 	"Gender Distribution": "লিংগৰ বিতৰণ",
@@ -267,16 +267,19 @@
 	"The tools, utilities and models  proposed to be developed in your language will rely on open source contributions through Bolo India crowd sourcing platform": "আপোনাৰ ভাষাত বিকশিত হ'ব লগা সঁজুলি, ব্যৱহা্ৰযোগ্য আৰু আৰ্হিবোৰ বোলো ইণ্ডিয়া বহু ব্যাক্তিকেন্দ্ৰিক মাধ্যমৰ জৰিয়তে মুক্ত উৎসৰ অৱদানৰ ওপৰত নিৰ্ভৰ কৰিব",
 	"Speech recognition relies on \"machine-learning\" technology that requires large datasets that include diverse voices and the corresponding text. Through Bolo India, we want to create a diverse open repository of Indian voices speaking Indian languages which can be used for this initiative": "ভাষণ চিনাক্তকৰণ \"মেচিন লাৰ্নিং\" প্ৰযুক্তিৰ ওপৰত নিৰৰ্ভশীল সেয়েহে ইয়াত এক বৃহৎ সংখ্যক ডাটাচেট লাগে, য'ত বিভিন্ন ভাৰতীয় ভাষাৰ কন্ঠ আৰু পাঠ্য দুয়োটাই অন্তৰ্ভূক্ত হৈ থাকে। বোলো ইণ্ডিয়াৰ যোগেদি, একষ্টেপে এনেকুৱা বিবিধ কথিত ভাৰতীয় ভাষাৰ মুক্ত উৎস সৃষ্টি কৰিব বিচাৰিছে যিটো নেকি উদ্যোক্তাসকলৰ লগতে আনেও এই পদক্ষেপত ব্যৱহাৰ কৰিব পাৰিব।",
 	"We are inviting you to join us and voluntarily contribute your voice to this initiative. Recording your voice at one stretch can be overwhelming hence you can do this by visiting the website multiple times and commence from where you left us off": "আমি আপোনাক আমাৰ সৈতে যোগদান কৰিবলৈ আমন্ত্ৰণ কৰি আছো আৰু স্বেচ্ছায়ে এই উদ্যোগত আপোনাৰ কণ্ঠস্বৰৰ অৰিহণা বিচাৰিছো। একে গতিত সম্পূৰ্ণভাৱে আপোনালোকৰ কন্ঠ ৰেকৰ্ড কৰাটো আপোনালোকৰ বাবে অত্যাধিক যেন লাগিব পাৰে সেয়েহে, আমি আমাৰ ৱেবচাইটত ক্ষুদ্ৰ ভাগত বিভক্ত কৰাৰ উপায় কৰি ৰাখিছোঁ, যাতে আপোনালোকে একাধিকবাৰ দৰ্শন কৰিব পাৰে আৰু যিখিনিত এৰি গৈছিল তাৰ পৰা আকৌ আৰম্ভ কৰিব পাৰে।",
-	"Thank You": "ধন্যবাদ",
-	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback.": "Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback.",
+	"Thank You": "আপোনাক ধন্যবাদ জনাইছো",
+	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback.": "आपला अभिप्राय आम्हाला \"बोला भारत\" ला तुमच्यासाठी उपयोगी बनविण्यासाठी मदत करतो, तुम्ही तुमच्या वेळेत वेळ काढून आम्हाला आपला अभिप्राय दिल्याबद्दल आम्ही तुमचे कौतुक करतो.",
 	"Most Contributed - <span id=\"languageId\"></span>": "সৰ্বাধিক অৱদান - <span id=\"languageId\"></span>",
 	"Thank you for your enthusiasm to validate the recordings.": "বাণীবদ্ধবোৰ বৈধকৰণ কৰিবলৈ আপোনাৰ উৎসাহৰ বাবে আপোনাক ধন্যবাদ।",
 	"We do not have any data in <span id=\"spn-validation-language\"></span> language. Please try again later.": "আমাৰ <span id=\"spn-validation-language\"></span> ভাষাত কোনো তথ্য নাই। অনুগ্ৰহ কৰি পিছত পুনৰ চেষ্টা কৰক।",
 	"Start Contributing in <span id=\"start-validation-language\"></span>": "<span id=\"start-validation-language\"></span> ৰ বাবে অৱদান দিয়া আৰম্ভ কৰক",
-	"Subject": "Subject",
-	"Description": "Description",
-	"Please type here...": "Please type here...",
-	"Failed to submit the feedback. Please try again.": "Failed to submit the feedback. Please try again.",
-	"Thank You for your valuable feedback": "Thank You for your valuable feedback",
-	"Back to Home": "Back to Home"
+	"Subject": "বিষয়",
+	"Description": "ব্যাখ্যা",
+	"Please type here...": "অনুগ্ৰহ কৰি ইয়াত টাইপ কৰক",
+	"Failed to submit the feedback. Please try again.": "মতামত দাখিল কৰিবলৈ ব্যৰ্থ। অনুগ্ৰহ কৰি পুনৰ চেষ্টা কৰক।",
+	"Thank You for your valuable feedback": "আপোনাৰ মূল্যৱান মতামতৰ বাবে আপোনাক ধন্যবাদ",
+	"Back to Home": "ঘৰলৈ উভতি যাওক",
+	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback": "আপোনাৰ মতামতে বোলো ইণ্ডিয়াক প্ৰাসংগিক কৰি ৰখাত সহায় কৰে, মতামতৰ বাবে দিয়া সময়খিনিৰ বাবে আমি আপোনাক প্ৰশংসা কৰোঁ।",
+	"National Language Translation Mission": "ৰাষ্ট্ৰীয় ভাষা অনুবাদ মিছন",
+	"Badge ID": "বেজ পৰিচয় পত্ৰ"
 }
