| Priyanshu | added translation for additional content for Kannada

--- a/locales/kn.json
+++ b/locales/kn.json
@@ -17,13 +17,13 @@
 	"Language": "ಕನ್ನಡ",
 	"Speech Recognition Models": "Speech Recognition Models",
 	"About Us": "ನಮ್ಮನ್ನು ಕುರಿತು",
-	"Select the language for voluntary contribution": "ಕೊಡುಗೆಗಾಗಿ ಭಾಷೆಯನ್ನು ಆಯ್ಕೆಮಾಡಿ",
+	"Select the language for voluntary contribution": "ಸ್ವಯಂಪ್ರೇರಿತ ಕೊಡುಗೆಗಾಗಿ ಭಾಷೆಯನ್ನು ಆಯ್ಕೆಮಾಡಿ",
 	"Show All": "ಎಲ್ಲವನ್ನೂ ತೋರಿಸಿ",
 	"Speak": "ಮಾತನಾಡಿ",
 	"Contribute Your Voice": "ನಿಮ್ಮ ಧ್ವನಿಯನ್ನು ಕೊಡುಗೆ ನೀಡಿ",
 	"Contribute your voice to create an open data repository of Indian languages": "ಭಾರತೀಯ ಭಾಷೆಗಳ ಮುಕ್ತ ಮಾಹಿತಿ ಭಂಡಾರವನ್ನು ರಚಿಸಲು ನಿಮ್ಮ ಧ್ವನಿಯನ್ನು ಕೊಡುಗೆ ನೀಡಿ",
-	"Listen": "ಆಲಿಸಿ",
-	"Validate What They Say": "ಅವರು ಹೇಳುತ್ತಿರುವುದನ್ನು ಮೌಲ್ಯೀಕರಿಸಿ",
+	"Listen": "ಪುಷ್ಟಿ ಕರೆ",
+	"Validate What They Say": "ಜೋ ಲಿಖಾ ಹೈ ಕ್ಯಾ ವಹೀ ಕಹಾ ಜಾ ರಹಾ ಹೈ",
 	"Help us by validating the recordings that others have contributed": "ಇತರರು ನೀಡಿದ ಧ್ವನಿ ಮಾದರಿಗಳ ಕೊಡುಗೆಗಳನ್ನು ಮೌಲ್ಯೀಕರಿಸುವ ಮೂಲಕ ನಮಗೆ ಸಹಾಯ ಮಾಡಿ",
 	"Bolo India: A crowdsourcing initiative for Indian languages": "ಬೋಲೋ ಇಂಡಿಯಾ: ಭಾರತೀಯ ಭಾಷೆಗಳಿಗೆ ಕ್ರೌಡ್ ಸೋರ್ಸಿಂಗ್ ಉಪಕ್ರಮ",
 	"India needs to be Aatmanirbhar in the area of speech recognition in Indian languages.  Hence, we want to create an open data repository of many Indian voices. Bolo India invites you to volunteer contribute your voice for this cause.": "ಭಾರತೀಯ ಭಾಷೆಗಳಲ್ಲಿ ಭಾಷಣ ಗುರುತಿಸುವಿಕೆಯ ಕ್ಷೇತ್ರದಲ್ಲಿ ಭಾರತವು ಆತ್ಮನಿರ್ಭರವಾಗಬೇಕಿದೆ. ಆದ್ದರಿಂದ, ನಾವು ಅನೇಕ ಭಾರತೀಯ ಧ್ವನಿಗಳ ಮುಕ್ತ ಮಾಹಿತಿ ಭಂಡಾರವನ್ನು ರಚಿಸಲು ಬಯಸುತ್ತೇವೆ. ಈ ಕಾರಣಕ್ಕಾಗಿ ನಿಮ್ಮ ಧ್ವನಿಯನ್ನು ಸ್ವಯಂಪ್ರೇರಿತರಾಗಿ ನೀಡಲು ಬೋಲೋ ಇಂಡಿಯಾ ನಿಮ್ಮನ್ನು ಆಹ್ವಾನಿಸುತ್ತದೆ.",
@@ -74,16 +74,16 @@
 	"Gender Distribution": "ಲಿಂಗ ವಿತರಣೆ",
 	"State Wise distribution": "ರಾಜ್ಯವಾರು ವಿತರಣೆ",
 	"Age Group Distribution": "ವಯೋಮಾನ ವಿತರಣೆ",
-	"Subject": "Subject",
-	"Description": "Description",
-	"Please type here...": "Please type here...",
-	"Failed to submit the feedback. Please try again.": "Failed to submit the feedback. Please try again.",
+	"Subject": "ವಿಷಯ",
+	"Description": "ವಿವರಣೆ",
+	"Please type here...": "ದಯವಿಟ್ಟು ಇಲ್ಲಿ ಟೈಪ್ ಮಾಡಿ",
+	"Failed to submit the feedback. Please try again.": "ಪ್ರತಿಕ್ರಿಯೆಯನ್ನು ಸಲ್ಲಿಸುವಲ್ಲಿ ಅಯಶಸ್ವಿಯಾಗಿದೆ. ದಯವಿಟ್ಟು ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ",
 	"SUBMIT": "ಸಲ್ಲಿಸು",
 	"Thank You for your valuable feedback": "ನಿಮ್ಮ ಅಮೂಲ್ಯವಾದ ಪ್ರತಿಕ್ರಿಯೆಗಾಗಿ ಧನ್ಯವಾದಗಳು",
 	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback": "ನಿಮ್ಮ ಪ್ರತಿಕ್ರಿಯೆ ಬೋಲೋ ಇಂಡಿಯಾವನ್ನು ಸಮರ್ಪಕವನ್ನಾಗಿಸಲು ನಮಗೆ ಸಹಾಯ ಮಾಡುತ್ತದೆ, ಪ್ರತಿಕ್ರಿಯೆ ನೀಡಲು ನೀವು ನಿಮ್ಮ ಸಮಯವನ್ನು ವ್ಯಯಿಸಿದುದನ್ನು ನಾವು ಪ್ರಶಂಸಿಸುತ್ತೇವೆ.",
 	"Back to Home": "ಹಿಂತಿರುಗಿ",
-	"India needs to be Atma Nirbhar in the area of speech recognition in Indian languages. Hence, we want to create an open data repository of many Indian voices. This is an effort by MeitY, Government of India, under the National Language Translation Mission (NLTM). This effort is supported by EkStep Foundation on a pro-bono basis and leverages its open source work under <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> along with various other open source frameworks.": "ಭಾರತೀಯ ಭಾಷೆಗಳಲ್ಲಿ ಭಾಷಣ ಪರಿಗಣನೆಯ ಮಾದರಿಗಳ ಅಭಿವೃದ್ಧಿಗೆ, ವೈವಿಧ್ಯಮಯ ಭಾರತೀಯ ಧ್ವನಿಗಳ ಮುಕ್ತ ಮಾಹಿತಿಗಳ ಭಂಡಾರದ ಅವಶ್ಯಕತೆಯಿದೆ. ಭಾರತೀಯ ಧ್ವನಿಗಳ ವೈವಿಧ್ಯಮಯ ಮುಕ್ತ ಮಾಹಿತಿ ಭಂಡಾರವನ್ನು ರಚಿಸಲು ನಿಮ್ಮ ಧ್ವನಿಯನ್ನು ತಲುಪಲು ಮತ್ತು ಕೊಡುಗೆ ನೀಡಲು ವಾಕ್ಯಾಂಶ್ ನಿಮ್ಮನ್ನು ಆಹ್ವಾನಿಸಿದ್ದಾರೆ.",
-	"Bolo India invites you to volunteer and contribute your voice for this cause. All your contributions are automatically processed and made available as open data in a useful fashion back to the community. Such data then can be used by all language enthusiasts and technologists to develop world class speech recognition applications.": "ಮುಕ್ತ ಮೂಲ ಕಾರ್ಯತಂತ್ರವು ವಿವಿಧ ಭಾಷಾ ಸಮುದಾಯಗಳು, ವ್ಯಕ್ತಿಗಳು ಮತ್ತು ತಂತ್ರಜ್ಞರಿಗೆ, ಅವರ ಭಾಷೆಯ ಬಗ್ಗೆ ಉತ್ಸಾಹಭರಿತವಾಗಿರುವ, ಭಾಷಣ ಮಾನ್ಯತ ಅನ್ವಕೆಗಳನ್ನು ಅಭಿವೃದ್ಧಿಪಡಿಸಲು ಮತ್ತು ಸಮುದಾಯದ ಒಳಿತಿಗಾಗಿ ವಿವಿಧ ವಿಚಾರ ವ್ಯಾಪ್ತಿಗಳಲ್ಲಿ ಸಂಯೋಜಿಸಲು ಅನುವು ಮಾಡಿಕೊಡುತ್ತದೆ",
+	"India needs to be Atma Nirbhar in the area of speech recognition in Indian languages. Hence, we want to create an open data repository of many Indian voices. This is an effort by MeitY, Government of India, under the National Language Translation Mission (NLTM). This effort is supported by EkStep Foundation on a pro-bono basis and leverages its open source work under <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> along with various other open source frameworks.": "ಭಾರತೀಯ ಭಾಷೆಗಳಲ್ಲಿ ಭಾಷಣ ಗುರುತಿಸುವಿಕೆಯ ಕ್ಷೇತ್ರದಲ್ಲಿ ಭಾರತ ಆತ್ಮನಿರ್ಭರವಾಗಬೇಕಿದೆ. ಆದ್ದರಿಂದ, ನಾವು ಅನೇಕ ಭಾರತೀಯ ಧ್ವನಿಗಳ ಮುಕ್ತ ಮಾಹಿತಿ ಭಂಡಾರವನ್ನು ರಚಿಸಬಯಸುತ್ತೇವೆ. ಇದು ರಾಷ್ಟ್ರೀಯ ಭಾಷಾ ಅನುವಾದ ನಿಯೋಗ (ಎನ್\u200Cಎಲ್\u200Cಟಿಎಂ)ದ ಅಡಿಯಲ್ಲಿ ಭಾರತ ಸರ್ಕಾರದ ಎಮ್ಈಐಟಿವೈಯ ಪ್ರಯತ್ನವಾಗಿದೆ. ಈಕೆಸ್ಟೆಪ್ ಫೌಂಡೇಶನ್ ಈ ಪ್ರಯತ್ನವನ್ನು ಸಾರ್ವಜನಿಕ ಹಿತಾಸಕ್ತಿಯಲ್ಲಿ ಬೆಂಬಲಿಸುತ್ತದೆ ಮತ್ತು  <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> ಅಡಿಯಲ್ಲಿ ಇತರ ವಿವಿಧ ತೆರೆದ ಮೂಲ ಚೌಕಟ್ಟುಗಳೊಂದಿಗೆ ಅದರ ತೆರೆದ ಮೂಲ ಕೆಲಸವನ್ನು ನಿಯಂತ್ರಿಸುತ್ತದೆ.",
+	"Bolo India invites you to volunteer and contribute your voice for this cause. All your contributions are automatically processed and made available as open data in a useful fashion back to the community. Such data then can be used by all language enthusiasts and technologists to develop world class speech recognition applications.": "ಈ ಕಾರಣಕ್ಕಾಗಿ ಸ್ವಯಂಸೇವಕರಾಗಲು ಮತ್ತು ನಿಮ್ಮ ಧ್ವನಿಯನ್ನು ನೀಡಲು ಬೋಲೋ ಇಂಡಿಯಾ ನಿಮ್ಮನ್ನು ಆಹ್ವಾನಿಸುತ್ತದೆ. ನಿಮ್ಮ ಎಲ್ಲ ಕೊಡುಗೆಗಳು ಸ್ವಯಂಚಾಲಿತವಾಗಿ ಸಂಸ್ಕರಿಸಲಾಗುತ್ತವೆ ಮತ್ತು ಮರಳಿ ಸಮುದಾಯಕ್ಕೆ ಉಪಯುಕ್ತವಾದ ಶೈಲಿಯಲ್ಲಿ ಮುಕ್ತ ಮಾಹಿತಿಯಾಗಿ ಲಭ್ಯವಾಗುತ್ತದೆ. ಎಲ್ಲ ಭಾಷಾ ಉತ್ಸಾಹಿಗಳು ಮತ್ತು ತಂತ್ರಜ್ಞರು ವಿಶ್ವ ದರ್ಜೆಯ ಭಾಷಣ ಗುರುತಿಸುವಿಕೆಯ ಅಪ್ಲಿಕೇಶನ್\u200Cಗಳನ್ನು ಅಭಿವೃದ್ಧಿಪಡಿಸಲು ಈ ಮಾಹಿತಿಯನ್ನು ಬಳಸಬಹುದು. \"",
 	"India is a land of many languages, our digital strategy must reflect it.": "ನಮ್ಮ ಬಹುಭಾಷಾ ಡಿಎನ್‌ಎ ಇನ್ನೂ ಡಿಜಿಟಲ್ ಮೊದಲ ತಂತ್ರದಲ್ಲಿ ಕಾಣೆಯಾಗಿದ ಅಂಶವಾಗಿದೆ",
 	"90% of India's population uses region languages to conduct their day-to-day activities.": "ಭಾರತವು ವಿಶಾಲವಾದ ಬಹುಭಾಷಾ ದೇಶವಾಗಿರುವುದರಿಂದ, ಭಾರತದ ಜನಸಂಖ್ಯೆಯ 90% ಜನರು ತಮ್ಮ ಶೈಕ್ಷಣಿಕ, ಸಾಮಾಜಿಕ ಮತ್ತು ಡಿಜಿಟಲ್ ಚಟುವಟಿಕೆಗಳನ್ನು ನಡೆಸಲು ಪ್ರಾದೇಶಿಕ ಭಾಷೆಗಳನ್ನು ಅವಲಂಬಿಸಿದ್ದಾರೆ.",
 	"As more and more people use digital platforms for financial, educational and social activities, digital platforms must work seamlessly in Indian Languages.": "ಅಂತರ್ಜಾಲ ಬಳಕೆದಾರರ ಪ್ರಮಾಣವು ಹೆಚ್ಚಾಗುತ್ತಿರುವುದರಿಂದ  ಮತ್ತು ಆರ್ಥಿಕ, ಶೈಕ್ಷಣಿಕ ಮತ್ತು ಆರ್ಥಿಕ ಚಟುವಟಿಕೆಗಳಿಗೆ ಡಿಜಿಟಲ್ ವೇದಿಕೆಗಳನ್ನು ಪ್ರವೇಶಿಸುವ ಬೇಡಿಕೆಯಿರುವುದರಿಂದ, ಮೊದಲು ಭಾರತೀಯ ಭಾಷೆಗಳನ್ನು ವಿವೇಚಿಸಲು ಪ್ರಾರಂಭಿಸುವ ಅವಶ್ಯಕತೆಯಿದೆ.",
@@ -110,8 +110,8 @@
 	"Report": "ರೆಕಾರ್ಡಿಂಗ್ ಅನ್ನು ಪ್ರಾರಂಭಿಸಿ",
 	"Test your Microphone and Speakers": "ನಿಮ್ಮ ಮೈಕ್ರೋಫೋನ್ ಸ್ಪೀಕರ್ ಗಳನ್ನು ಪರೀಕ್ಷಿಸಿ",
 	"Test Mic": "ಎಮ್ ಆಯ್ ಸಿ ಪರೀಕ್ಷಿಸಿ",
-	"Please speak clearly": "Please speak clearly",
-	"Low/No Background Noise": "Low/No Background Noise",
+	"Please speak clearly": "ದಯವಿಟ್ಟು ಸ್ಪಷ್ಟವಾಗಿ ಮಾತನಾಡಿ",
+	"Low/No Background Noise": "ಹಿನ್ನೆಲೆ ಸದ್ದು ಕಡಿಮೆ / ಇಲ್ಸ",
 	"Background Noise Detected": "ಹಿನ್ನೆಲೆ ಸದ್ದು ಕಂಡುಬಂದಿದೆ",
 	"Test Speakers": "ಸ್ಪೀಕರ್ ಪರೀಕ್ಷಿಸಿ",
 	"Let's get started!": "ನಡೆಯಿರಿ ನಾವೀಗ ಆರಂಭಿಸೋಣ!",
@@ -168,5 +168,8 @@
 	"Match the voice to the text <b>accurately</b>": "ಧ್ವನಿಯನ್ನು ಪಠ್ಯಕ್ಕೆ ನಿಖರವಾಗಿ ಹೊಂದಿಸಿ",
 	"If you are unsure of the match, skip the particular voice sample": "ಹೊಂದಾಣಿಕೆಯ ಬಗ್ಗೆ ನಿಮಗೆ ಖಚಿತವಿಲ್ಲದಿದ್ದರೆ, ನಿರ್ದಿಷ್ಟ ಧ್ವನಿ ಮಾದರಿಯನ್ನು ಬಿಟ್ಟುಬಿಡಿ",
 	"START": "ಪ್ರಾರಂಭಿಸು",
-	"Most Contributed": "ಹೆಚ್ಚು ಕೊಡುಗೆ ನೀಡಲಾದ"
+	"Most Contributed": "ಹೆಚ್ಚು ಕೊಡುಗೆ ನೀಡಲಾದ",
+	"National Language Translation Mission": "ರಾಷ್ಟ್ರೀಯ ಭಾಷಾ ಅನುವಾದ ನಿಯೋಗ",
+	"Badge ID": "ಬ್ಯಾಜ್ ಐಡಿ",
+	"Download": "ಡೌನ್ ಲೋಡ್"
 }
