| Priyanshu | added translation for additional content for Marathi

--- a/locales/mr.json
+++ b/locales/mr.json
@@ -17,13 +17,13 @@
 	"Language": "मराठी",
 	"Speech Recognition Models": "Speech Recognition Models",
 	"About Us": "आमच्याबद्दल",
-	"Select the language for voluntary contribution": "Select the language for voluntary contribution",
+	"Select the language for voluntary contribution": "तुमचे योगदान देण्यासाठी भाषा निवडा",
 	"Show All": "सर्व दाखवा",
 	"Speak": "बोला",
 	"Contribute Your Voice": "तुमच्या आवाजाचे योगदान द्या",
 	"Contribute your voice to create an open data repository of Indian languages": "भारतीय भाषांचा ओपन डेटा संग्रह तयार करण्यासाठी आपल्या आवाजाचे योगदान द्या",
-	"Listen": "ऐका",
-	"Validate What They Say": "ते जे बोलतील ते प्रमाणित करा",
+	"Listen": "ऐका (प्रमाणित करा) ",
+	"Validate What They Say": "जे लिहिले आहे तेच बोलले जात आहे का",
 	"Help us by validating the recordings that others have contributed": "इतरांनी ज्या आवाजांच्या नमुन्यांचे योगदान दिले आहे त्यांना प्रमाणित करून आम्हाला मदत करा",
 	"Bolo India: A crowdsourcing initiative for Indian languages": "बोला भारत : भारतीय भाषांसाठी क्राऊडसोर्सिंगचा एक उपक्रम",
 	"India needs to be Aatmanirbhar in the area of speech recognition in Indian languages.  Hence, we want to create an open data repository of many Indian voices. Bolo India invites you to volunteer contribute your voice for this cause.": "भारतीय भाषांमध्ये जे बोलले जाते ते ओळखण्याच्या क्षेत्रात भारताला आत्मनिर्भर बनविण्याची गरज आहे. म्हणून आम्हाला अनेक प्रकारच्या भारतीय आवाजांचा ओपन डेटा संग्रह तयार करावयाचा आहे. हा उद्देश पूर्ण करण्यासाठी बोला भारत तुम्हाला तुमच्या स्वतःच्या आवाजाचे योगदान देण्यासाठी आमंत्रित करीत आहे.",
@@ -62,8 +62,8 @@
 	"Terms & Conditions": "अटी व शर्ती",
 	"Privacy Policy": "गोपनीयता धोरण",
 	"Feedback": "अभिप्राय द्या",
-	"India needs to be Atma Nirbhar in the area of speech recognition in Indian languages. Hence, we want to create an open data repository of many Indian voices. This is an effort by MeitY, Government of India, under the National Language Translation Mission (NLTM). This effort is supported by EkStep Foundation on a pro-bono basis and leverages its open source work under <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> along with various other open source frameworks.": "भारतीय भाषांमध्ये जे बोलले जाते ते ओळखण्याच्या क्षेत्रात भारताला आत्मनिर्भर बनविण्याची गरज आहे. म्हणून आम्हाला अनेक प्रकारच्या भारतीय आवाजांचा ओपन डेटा संग्रह तयार करावयाचा आहे. हा उद्देश पूर्ण करण्यासाठी बोला भारत तुम्हाला तुमच्या स्वतःच्या आवाजाचे योगदान देण्यासाठी आमंत्रित करीत आहे.",
-	"Bolo India invites you to volunteer and contribute your voice for this cause. All your contributions are automatically processed and made available as open data in a useful fashion back to the community. Such data then can be used by all language enthusiasts and technologists to develop world class speech recognition applications.": "ह्या ओपन डेटाचा उपयोग भाषा आणि तंत्रज्ञानामध्ये कार्य करु इच्छिणारे सर्व लोक विश्व स्तरीय भाषा ओळख ॲप्लिकेशन तयार करण्यासाठी करु शकतात.",
+	"India needs to be Atma Nirbhar in the area of speech recognition in Indian languages. Hence, we want to create an open data repository of many Indian voices. This is an effort by MeitY, Government of India, under the National Language Translation Mission (NLTM). This effort is supported by EkStep Foundation on a pro-bono basis and leverages its open source work under <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> along with various other open source frameworks.": "भारताला, भारतीय भाषामध्ये जे बोलले जाते ते ओळखण्याच्या क्षेत्रात आत्मनिर्भर बनविणे गरजेचे आहे. यासाठी, आम्हाला अनेक भारतीय आवाजांचा ओपन डेटा संग्रह तयार करावयाचा आहे. हे राष्ट्रीय भाषा अनुवाद मिशन (एनएलटीएम)च्या अंतर्गत, MeitY, भारत सरकारचा एक प्रयास आहे. ह्या प्रयासाला जन हिताच्या आधारावर एकस्टेप फाउंडेशनचे समर्थन मिळाले आहे आणि हे बऱ्याच ओपन सोर्स फ्रेमवर्कच्या सोबतच <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> मध्ये आपल्या स्वतःच्या ओपन सोर्स वर्कलाही लाभकारी ठरते आहे.",
+	"Bolo India invites you to volunteer and contribute your voice for this cause. All your contributions are automatically processed and made available as open data in a useful fashion back to the community. Such data then can be used by all language enthusiasts and technologists to develop world class speech recognition applications.": "बोला भारत आपल्याला ह्या कार्यामध्ये आपल्या इच्छाने आपल्या आवाजाचे योगदान करण्यासाठी आमंत्रित करत आहे. आपल्या सर्व योगदानाची स्वयंचलितपणे प्रक्रिया करुन समुदायाला एका उपयोगी स्वरूपात ओपन डेटासारखे उपलब्ध करून दिला जातो. विश्व स्तरीय भाषा ओळख अप्लिकेशन तयार करण्यासाठी अशा प्रकारच्या डेटाचा वापर, भाषा आणि तंत्रज्ञानाची आवड असणारी लोक करु शकतात.",
 	"India is a land of many languages, our digital strategy must reflect it.": "भारत हा अनेक भाषांचा देश आहे, आपल्या डिजिटल योजनेमध्ये ह्या बाबीं दाखविल्या पाहिजेत.",
 	"90% of India's population uses region languages to conduct their day-to-day activities.": "भारतातील 90% लोक संख्या आपले दैनंदिन कार्य करण्यासाठी प्रादेशिक भाषेचा वापर करतात.",
 	"As more and more people use digital platforms for financial, educational and social activities, digital platforms must work seamlessly in Indian Languages.": "ज्याप्रमाणे अधिकाधिक लोक आर्थिक, शैक्षणिक आणि सामाजिक उपक्रमांसाठी डिजिटल प्लॅटफॉर्मचा वापर करीत आहेत, त्याप्रमाणे डिजिटल प्लॅटफॉर्मने भारतीय भाषांमध्ये अखंडपणे कार्य केले पाहिजे.",
@@ -91,8 +91,8 @@
 	"Report": "अहवाल द्या",
 	"Test your Microphone and Speakers": "कृपया तुमच्या मायक्रोफोन आणि स्पीकर्सची तपासणी करा",
 	"Test Mic": "माइकची तपासणी करा",
-	"Please speak clearly": "Please speak clearly",
-	"Low/No Background Noise": "Low/No Background Noise",
+	"Please speak clearly": "कृपया स्पष्टपणे बोला",
+	"Low/No Background Noise": "पार्श्वभूमी आवाज कमी/येत नाही",
 	"Background Noise Detected": "पार्श्वभूमी आवाज येत आहे",
 	"Test Speakers": "स्पीकरची तपासणी करा",
 	"Let's get started!": "चला, सुरू करु या.",
@@ -150,12 +150,12 @@
 	"Match the voice to the text <b>accurately</b>": "मजकूराशी आवाज अचूकपणे जुळवा",
 	"If you are unsure of the match, skip the particular voice sample": "जर आपल्याला कोणत्याही आवाजाच्या जुळणीबद्दल खात्री वाटत नसेल, तर आपण तो आवाजाचा नमुना सोडून टाका",
 	"START": "सुरू करा",
-	"Subject": "Subject",
-	"Description": "Description",
-	"Please type here...": "Please type here...",
-	"Failed to submit the feedback. Please try again.": "Failed to submit the feedback. Please try again.",
+	"Subject": "विषय",
+	"Description": "वर्णन",
+	"Please type here...": "कृपया येथे टाइप करा",
+	"Failed to submit the feedback. Please try again.": "अभिप्राय सबमिट करण्यात अयशस्वी. कृपया पुन्हा प्रयत्न करा.",
 	"Thank You for your valuable feedback": "आपल्या बहुमूल्य अभिप्रायाबद्दल धन्यवाद",
-	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback": "आपला अभिप्राय आम्हाला बोला भारत ला तुमच्यासाठी उपयोगी बनविण्यासाठी मदत करतो, तुम्ही तुमच्या वेळेत वेळ काढून आम्हाला आपला अभिप्राय दिल्याबद्दल आम्ही तुमचे कौतुक करतो.",
+	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback": "आपला अभिप्राय आम्हाला \"बोला भारत\" ला तुमच्यासाठी उपयोगी बनविण्यासाठी मदत करतो, तुम्ही तुमच्या वेळेत वेळ काढून आम्हाला आपला अभिप्राय दिल्याबद्दल आम्ही तुमचे कौतुक करतो.",
 	"Back to Home": "मुख्यपृष्ठावर परत जा",
 	"Oops": "अरेरे",
 	"Page Not Found": "पृष्ठ सापडले नाही",
@@ -171,5 +171,8 @@
 	"Quarterly": "त्रैमासिक",
 	"Gender Distribution": "लिंग वर्गीकरण",
 	"State Wise distribution": "राज्यवार वर्गीकरण",
-	"Age Group Distribution": "वय गट वर्गीकरण"
+	"Age Group Distribution": "वय गट वर्गीकरण",
+	"National Language Translation Mission": "राष्ट्रीय भाषा अनुवाद मिशन",
+	"Badge ID": "बॅज आयडी",
+	"Download": "डाउनलोड करा"
 }
