--- a/locales/pa.json
+++ b/locales/pa.json
@@ -4,7 +4,7 @@
 	"Know More": "ਹੋਰ ਜਾਣੋ",
 	"Vakyansh aims to host the key essentials of Automatic Speech Recognition (ASR) technology, focusing on Indian languages. It is a resource that allows people to build applications that leverage speech recognition.": "Vakyansh aims to host the key essentials of Automatic Speech Recognition (ASR) technology, focusing on Indian languages. It is a resource that allows people to build applications that leverage speech recognition.",
 	"Select language": "ਇੱਕ ਭਾਸ਼ਾ ਚੁਣੋ",
-	"START RECORDING": "ਰਿਕਾਰਡ ਕਰਨਾ ਸ਼ੁਰੂ ਕਰੋ",
+	"START RECORDING": "ਰਰਿਕਾਰਡਿੰਗ ਸ਼ੁਰੂ ਕਰੋ",
 	"We rely on your contributions": "ਅਸੀਂ ਤੁਹਾਡੇ ਯੋਗਦਾਨਾਂ 'ਤੇ ਨਿਰਭਰ ਕਰਦੇ ਹਾਂ",
 	"For the development of a speech recognition product that focuses solely on Indian languages, there is a need for an enormous repository of diversified Indian voices. Through Vakyansh, we are reaching out to you to contribute your voices to create a diverse open source repository of Indian voices to this end.": "For the development of a speech recognition product that focuses solely on Indian languages, there is a need for an enormous repository of diversified Indian voices. Through Vakyansh, we are reaching out to you to contribute your voices to create a diverse open source repository of Indian voices to this end.",
 	"speakers contributed": "ਯੋਗਦਾਨ ਕਰਨ ਵਾਲੇ ਸਪੀਕਰ",
@@ -43,7 +43,7 @@
 	"Vakyansh aims to open source the speech recognition models in various languages, the datasets collected through various channels and the linguistic utilities developed to process and clean the data and make it usable by speech recognition tools.": "Vakyansh aims to open source the speech recognition models in various languages, the datasets collected through various channels and the linguistic utilities developed to process and clean the data and make it usable by speech recognition tools.",
 	"The open source strategy will enable the various language communities, individuals and technologists, who are passionate about their language, to develop speech recognition applications, and integrate them in various domains for the good of the community.": "The open source strategy will enable the various language communities, individuals and technologists, who are passionate about their language, to develop speech recognition applications, and integrate them in various domains for the good of the community.",
 	"Crowd Sourcing & your contribution": "ਕਰਾਊਡ ਸੋਰਸਿੰਗ ਅਤੇ ਤੁਹਾਡਾ ਯੋਗਦਾਨ",
-	"This is where you come in.": "ਇੱਥੇ ਸਾਨੂੰ ਤੁਹਾਡੀ ਮਦਦ ਦੀ ਲੋੜ ਹੈ।",
+	"This is where you come in.": "ਇਸ ਲਈ ਤੁਸੀਂ ਇੱਥੇ ਹੋ",
 	"Every minute of your contribution will make a huge difference and bring us closer to our objective.": "ਤੁਹਾਡੇ ਯੋਗਦਾਨ ਦਾ ਹਰ ਇੱਕ ਮਿੰਟ ਇੱਕ ਬਹੁਤ ਵੱਡੀ ਤਬਦੀਲੀ ਦਾ ਕਾਰਨ ਬਣੇਗਾ ਅਤੇ ਸਾਨੂੰ ਆਪਣੇ ਉਦੇਸ਼ ਦੇ ਇੱਕ ਕਦਮ ਹੋਰ ਨੇੜੇ ਲੈ ਜਾਵੇਗਾ।",
 	"ABOUT THE ORGANISATION": "ਸੰਸਥਾ ਬਾਰੇ",
 	"EkStep Foundation gathers partners and creates open infrastructure, tools and frameworks to solve complex societal problems at scale. We do this by leveraging the open source digital infrastructure we have created called Sunbird and by following a way of thinking and doing called the Societal Platform Approach.": "ਏਕਸਟੈਪ ਫ਼ਾਉਂਡੇਸ਼ਸ਼ਨ ਜਟਿਲ ਸਮਾਜਿਕ ਸਮੱਸਿਆਵਾਂ ਦਾ ਵੱਡੇ ਪੈਮਾਨੇ 'ਤੇ ਹੱਲ ਕਰਨ ਲਈ ਭਾਗੀਦਾਰਾਂ ਨੂੰ ਇਕੱਠਾ ਕਰਕੇ ਖੁੱਲੇ ਇੰਫਰਾਸਟ੍ਰਕਚਰ, ਟੂਲ ਅਤੇ ਫਰੇਮਵਰਕ ਦਾ ਨਿਰਮਾਣ ਕਰਦੀ ਹੈ। ਅਸੀਂ ਇੰਝ ਕਰਨ ਲਈ ਸਾਡੇ ਵੱਲੋਂ ਬਣਾਏ ਗਏ \"ਸਨਬਰਡ\" ਨਾਮਕ ਖੁੱਲ੍ਹੇ ਸਰੋਤ ਦੇ ਡਿਜੀਟਲ ਇੰਫਰਾਸਟ੍ਰਕਚਰ ਦੀ ਵਰਤੋਂ ਕਰਦੇ ਹਾਂ ਅਤੇ \"ਸਮਾਜਿਕ ਪਲੇਟਫਾਰਮ ਪਹੁੰਚ\" ਨਾਮਕ ਇੱਕ ਸੋਚਣ ਅਤੇ ਕਰਨ ਦੇ ਢੰਗ ਦੀ ਪਾਲਣਾ ਕਰਦੇ ਹਾਂ।",
@@ -55,10 +55,10 @@
 	"Copyright & Licensing Notice": "Copyright & Licensing Notice",
 	"Recording Instructions": "ਰਿਕਾਰਡਿੰਗ ਸੰਬੰਧੀ ਹਿਦਾਇਤਾਂ",
 	"START": "ਸ਼ੁਰੂ ਕਰੋ",
-	"Let's get started!": "ਆਓ ਸ਼ੁਰੂਆਤ ਕਰੀਏ!",
+	"Let's get started!": "ਆਓ ਸ਼ੁਰੂ ਕਰੀਏ",
 	"SKIP": "ਛੱਡੋ",
-	"STOP RECORDING": "ਰਿਕਾਰਡਿੰਗ ਬੰਦ ਕਰੋ",
-	"Audio recording is too small. Please Re-record": "ਆਡੀਓ ਰਿਕਾਰਡਿੰਗ ਬਹੁਤ ਜ਼ਿਆਦਾ ਛੋਟੀ ਹੈ। ਕਿਰਪਾ ਕਰਕੇ ਦੁਬਾਰਾ ਰਿਕਾਰਡ ਕਰੋ",
+	"STOP RECORDING": "ਰਰਿਕਾਰਡਿੰਗ ਬੰਦ ਕਰੋ",
+	"Audio recording is too small. Please Re-record": "ਆਡੀਓ ਰਿਕਾਰਡਿੰਗ ਬਹੁਤ ਛੋਟੀ ਹੈ। ਕਿਰਪਾ ਕਰਕੇ ਮੁੜ-ਰਿਕਾਰਡ ਕਰੋ",
 	"RE-RECORD": "ਮੁੜ-ਰਿਕਾਰਡ ਕਰੋ",
 	"NEXT": "ਅੱਗੇ",
 	"away from reaching your goal!": "ਤੁਸੀਂ ਆਪਣੇ ਟੀਚੇ 'ਤੇ ਪਹੁੰਚਣ ਤੋਂ ਇੰਨਾ ਦੂਰ ਹੋ!",
@@ -87,19 +87,19 @@
 	"Odia (Select languages)": "Odia (Select languages)",
 	"Select Your Preferred Language": "ਆਪਣੀ ਤਰਜੀਹੀ ਭਾਸ਼ਾ ਚੁਣੋ",
 	"Select the language you wish to contribute/validate in:": "Select the language you wish to contribute/validate in:",
-	"languages contributed": "ਯੋਗਦਾਨ ਕੀਤੀਆਂ ਭਾਸ਼ਾਵਾਂ",
+	"languages contributed": "ਯੋਗਦਾਨ ਕੀਤੀਆਂ ਗਈਆਂ ਭਾਸ਼ਾਵਾਂ",
 	"hours recorded": "ਰਿਕਾਰਡ ਕੀਤੇ ਗਏ ਘੰਟੇ",
 	"Select the language for contribution": "ਉਹ ਭਾਸ਼ਾ ਚੁਣੋ ਜਿਸ ਵਿੱਚ ਤੁਸੀਂ ਯੋਗਦਾਨ ਕਰਨਾ ਚਾਹੁੰਦੇ ਹੋ",
 	"Vakyansh: A crowdsourcing initiative for Indian languages": "ਵਾਕਿਆਂਸ਼: ਭਾਰਤੀ ਭਾਸ਼ਾਵਾਂ ਲਈ ਇੱਕ ਕਰਾਊਡਸੋਰਸਿੰਗ ਪਹਿਲ",
 	"For the development of speech recognition models in Indian languages, there is a need for an open data repository of diversified Indian voices. Vakyansh invites you to reach out and contribute your voice to create a diverse open data repository of Indian voices.": "ਭਾਰਤੀ ਭਾਸ਼ਾਵਾਂ ਲਈ ਬੋਲੀ ਪਛਾਣ ਮਾਡਲਾਂ ਨੂੰ ਵਿਕਸਿਤ ਕਰਨ ਲਈ, ਬਹੁਭਾਂਤੀ ਭਾਰਤੀ ਅਵਾਜ਼ਾਂ ਦੇ ਇੱਕ ਵਿਸ਼ਾਲ ਖੁੱਲੇ ਡਾਟਾ ਭੰਡਾਰ ਦੀ ਲੋੜ ਹੈ। ਵਾਕਿਆਂਸ਼ ਤੁਹਾਨੂੰ ਸਾਡੇ ਤੱਕ ਪਹੁੰਚ ਕਰਨ ਲਈ ਸੱਦਾ ਦਿੰਦਾ ਹੈ, ਤਾਂਕਿ ਤੁਸੀਂ ਬਹੁਭਾਂਤੀ ਭਾਰਤੀ ਅਵਾਜ਼ਾਂ ਦੇ ਇੱਕ ਵਿਸ਼ਾਲ ਖੁੱਲੇ ਡਾਟਾ ਭੰਡਾਰ ਨੂੰ ਸਿਰਜਣ ਲਈ ਆਪਣੀਆਂ ਅਵਾਜ਼ਾਂ ਅਤੇ ਸ਼ਬਦਾਂ ਦਾ ਯੋਗਦਾਨ ਪਾਓ।",
-	"The key to building speech recognition models, lies in the diversity of the data that you provide by contributing across states, dialects, accents, gender and age group. The magnitude of this diversity across the nation, gives us collective strength in empowering our languages.": "ਇੱਕ ਬੋਲੀ ਪਛਾਣ ਮਾਡਲ ਵਿਕਸਿਤ ਕਰਨ ਲਈ ਸਭ ਤੋਂ ਮਹੱਤਵਪੂਰਨ ਹੈ ਵੱਖ-ਵੱਖ ਰਾਜਾਂ, ਉਪ-ਭਾਸ਼ਾਵਾਂ, ਲਹਿਜ਼ਿਆਂ, ਲਿੰਗ ਅਤੇ ਉਮਰ ਸਮੂਹਾਂ ਤੋਂ ਤੁਹਾਡੇ ਵੱਲੋਂ ਯੋਗਦਾਨ ਕੀਤਾ ਗਿਆ ਬਹੁ-ਭਾਂਤੀ ਡਾਟਾ। ਪੂਰੇ ਦੇਸ਼ ਵਿਚਲੀ ਇਸ ਵਿਭਿੰਨਤਾ ਦੀ ਮਹੱਤਤਾ, ਸਾਨੂੰ ਸਾਡੀਆਂ ਭਾਸ਼ਾਵਾਂ ਨੂੰ ਸਸ਼ਕਤ ਕਰਨ ਦੀ ਸਮੂਹਿਕ ਸਮਰੱਥਾ ਪ੍ਰਦਾਨ ਕਰਦੀ ਹੈ।",
+	"The key to building speech recognition models, lies in the diversity of the data that you provide by contributing across states, dialects, accents, gender and age group. The magnitude of this diversity across the nation, gives us collective strength in empowering our languages.": "ਇੱਕ ਬੋਲੀ ਪਛਾਣ ਮਾਡਲ ਵਿਕਸਿਤ ਕਰਨ ਲਈ ਸਭ ਤੋਂ ਮਹੱਤਵਪੂਰਨ ਹੈ ਵੱਖ-ਵੱਖ ਰਾਜਾਂ, ਉਪ-ਭਾਸ਼ਾਵਾਂ, ਲਹਿਜ਼ਿਆਂ, ਲਿੰਗ ਅਤੇ ਉਮਰ ਸਮੂਹਾਂ ਤੋਂ ਤੁਹਾਡੇ ਵੱਲੋਂ ਯੋਗਦਾਨ ਕੀਤਾ ਗਿਆ ਬਹੁ-ਭਾਂਤੀ ਡਾਟਾ। ਪੂਰੇ ਦੇਸ਼ ਵਿਚਲੀ ਇਸ ਵਿਭਿੰਨਤਾ ਦੀ ਮਹੱਤਤਾ, ਸਾਨੂੰ ਸਾਡੀਆਂ ਭਾਸ਼ਾਵਾਂ ਨੂੰ ਮਜ਼ਬੂਤ ਕਰਨ ਦੀ ਸਮੂਹਿਕ ਸਮਰੱਥਾ ਪ੍ਰਦਾਨ ਕਰਦੀ ਹੈ। ",
 	"Top Languages": "ਪ੍ਰਮੁੱਖ ਭਾਸ਼ਾਵਾਂ",
 	"By hours of data contributed": "ਯੋਗਦਾਨ ਕੀਤੇ ਗਏ ਘੰਟਿਆਂ ਮੁਤਾਬਕ",
 	"By number of speakers": "ਸਪੀਕਰਾਂ ਦੀ ਗਿਣਤੀ ਮੁਤਾਬਕ",
 	"VIEW ALL DETAILS": "ਸਾਰੇ ਵੇਰਵੇ ਦੇਖੋ",
 	"Select Age Group": "ਉਮਰ ਸਮੂਹ ਚੁਣੋ",
 	"I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>": "ਮੈਂ <a href=\"/terms-and-conditions\">ਨਿਯਮ ਅਤੇ ਸ਼ਰਤਾਂ</a> ਨੂੰ ਪੜ੍ਹ ਲਿਆ ਹੈ ਮੈਂ ਇਹਨਾਂ ਨਾਲ ਸਹਿਮਤ ਹਾਂ",
-	"Show All": "ਸਾਰੇ ਦਿਖਾਓ",
+	"Show All": "ਸਭ ਵੇਖਾਓ",
 	"Enter preferred username": "ਤਰਜੀਹੀ ਵਰਤੋਂਕਾਰ ਨਾਮ ਦਾਖਲ ਕਰੋ",
 	"Username cannot be more than 12 characters": "ਵਰਤੋਂਕਾਰ ਨਾਮ ਵਿੱਚ 12 ਤੋਂ ਜ਼ਿਆਦਾ ਅੱਖਰ-ਚਿੰਨ੍ਹ ਨਹੀਂ ਹੋ ਸਕਦੇ",
 	"Data Last Updated": "ਡਾਟਾ ਅੱਪਡੇਟ ਹੋਣ ਦੀ ਪਿਛਲੀ ਤਾਰੀਖ਼",
@@ -141,7 +141,7 @@
 	"to go back to home page": "ਹੋਮ ਪੇਜ ਤੇ ਵਾਪਸ ਜਾਣ ਲਈ ਇੱਥੇ",
 	"hrs recorded in": "%language ਭਾਸ਼ਾ ਵਿੱਚ %hours ਘੰਟੇ ਰਿਕਾਰਡ ਕੀਤੇ ਗਏ",
 	"hrs validated in": "%language ਭਾਸ਼ਾ ਵਿੱਚ %hours ਘੰਟੇ ਪ੍ਰਮਾਣਿਤ ਕੀਤੇ ਗਏ",
-	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "ਰਿਕਾਰਡਿੰਗ <span id=\"counter\"></span>  ਸਕਿੰਟਾਂ ਬਾਅਦ ਸਵੈਚਲਿਤ ਤੌਰ 'ਤੇ ਬੰਦ ਹੋ ਜਾਵੇਗੀ",
+	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "<span id=\"counter\"></span> ਸਕਿੰਟ ਬਾਅਦ ਰਿਕਾਰਡਿੰਗ ਆਪਣੇ-ਆਪ ਰੁਕ ਜਾਏਗੀ",
 	"Incorrect": "ਗ਼ਲਤ",
 	"Replay": "ਮੁੜ-ਚਲਾਓ",
 	"Pause": "ਰੋਕੋ",
@@ -160,19 +160,20 @@
 	"Transgender - He": "Transgender - He",
 	"Transgender - She": "Transgender - She",
 	"Rather Not Say": "Rather Not Say",
-	"Feedback": "Feedback",
+	"Feedback": "ਸੁਝਾਅ",
 	"Quick Tips": "ਕਵਿੱਕ ਨੁਕਤੇ",
 	"Read once <b>before recording it</b>": "ਰਿਕਾਰਡ ਕਰਨ ਤੋਂ ਪਹਿਲਾਂ ਇੱਕ ਵਾਰ ਜ਼ਰੂਰ ਪੜ੍ਹੋ",
-	"Test your Microphone and Speakers": "ਆਪਣੇ ਮਾਈਕਰੋਫ਼ੋਨ ਅਤੇ ਸਪੀਕਰਾਂ ਦੀ ਜਾਂਚ ਕਰੋ",
+	"Test your Microphone and Speakers": "ਆਪਣੇ ਮਾਈਕਰੋਫੋਨ ਅਤੇ ਸਪੀਕਰਾਂ ਦੀ ਜਾਂਚ ਕਰੋ",
 	"Test Mic": "ਮਾਈਕ ਦੀ ਜਾਂਚ ਕਰੋ",
-	"Test Speakers": "ਸਪੀਕਰ ਦੀ ਜਾਂਚ ਕਰੋ",
-	"Recording for 5 seconds": "Recording for 5 seconds",
-	"Recording for 4 seconds": "Recording for 4 seconds",
-	"Recording for 3 seconds": "Recording for 3 seconds",
-	"Recording for 2 seconds": "Recording for 2 seconds",
-	"Recording for 1 seconds": "Recording for 1 second",
-	"Playingback Audio": "Playingback Audio",
-	"Playing": "ਚਲਾਇਆ ਜਾ ਰਿਹਾ ਹੈ",
+	"Test Speakers": "ਸਪੀਕਰਾਂ ਦੀ ਜਾਂਚ ਕਰੋ",
+	"Recording": "ਰਿਕਾਰਡਿੰਗ",
+	"Recording for 5 seconds": "5 ਸਕਿੰਟ ਲਈ ਰਿਕਾਰਡਿੰਗ",
+	"Recording for 4 seconds": "4 ਸਕਿੰਟ ਲਈ ਰਿਕਾਰਡਿੰਗ",
+	"Recording for 3 seconds": "3 ਸਕਿੰਟ ਲਈ ਰਿਕਾਰਡਿੰਗ",
+	"Recording for 2 seconds": "2 ਸਕਿੰਟ ਲਈ ਰਿਕਾਰਡਿੰਗ",
+	"Recording for 1 seconds": "1 ਸਕਿੰਟ ਲਈ ਰਿਕਾਰਡਿੰਗ",
+	"Playingback Audio": "ਪਿੱਛੇ ਆਡੀਓ ਚੱਲ ਰਹੀ ਹੈ",
+	"Playing": "ਚੱਲ ਰਿਹਾ ਹੈ",
 	"More Languages": "ਹੋਰ ਭਾਸ਼ਾਵਾਂ",
 	"Other Languages": "ਦੂਜੀਆਂ ਭਾਸ਼ਾਵਾਂ",
 	"Get comfortable with the text before recording": "ਰਿਕਾਰਡ ਕਰਨ ਤੋਂ ਪਹਿਲਾਂ ਲਿਖਤ ਨੂੰ ਚੰਗੀ ਤਰ੍ਹਾਂ ਪੜ੍ਹ ਅਤੇ ਸਮਝ ਲਓ",
@@ -198,19 +199,60 @@
 	"You are in control, lead the way": "ਕਮਾਨ ਤੁਹਾਡੇ ਹੱਥ ਵਿੱਚ ਹੈ, ਸਾਡੀ ਅਗਵਾਈ ਕਰੋ",
 	"Spread the word. Share it with your friends and family.": "ਇਸ ਬਾਰੇ ਸਭ ਨੂੰ ਦੱਸੋ। ਆਪਣੇ ਦੋਸਤਾਂ ਅਤੇ ਪਰਿਵਾਰ ਨਾਲ ਇਸ ਨੂੰ ਸਾਂਝਾ ਕਰੋ।",
 	"I've contributed towards building open language repository for India on https://boloindia.nplt.in You and I can make a difference by donating our voices that can help machines learn our language and interact with us through great lingusitic applications. Our <x> language ranks <y> on boloindia. Do your bit and empower the language?": "ਮੈਂ https://boloindia.nplt.in 'ਤੇ ਭਾਰਤ ਲਈ ਭਾਸ਼ਾਵਾਂ ਦੇ ਖੁੱਲੇ ਸਰੋਤ ਦੇ ਭੰਡਾਰ ਨੂੰ ਬਣਾਉਣ ਵਿੱਚ ਆਪਣਾ ਯੋਗਦਾਨ ਪਾਇਆ। ਮੈਂ ਅਤੇ ਤੁਸੀਂ ਆਪਣੀਆਂ ਅਵਾਜ਼ਾਂ ਦਾ ਯੋਗਦਾਨ ਕਰਕੇ ਮਸ਼ੀਨਾਂ ਨੂੰ ਸਾਡੀਆਂ ਭਾਸ਼ਾਵਾਂ ਸਿੱਖਣ ਅਤੇ ਬਿਹਤਰੀਨ ਭਾਸ਼ਾਈ ਐਪਲੀਕੇਸ਼ਨਾਂ ਰਾਹੀਂ ਸਾਡੇ ਨਾਲ ਗੱਲਬਾਤ ਕਰਨ ਵਿੱਚ ਮਦਦ ਕਰ ਸਕਦੇ ਹਾਂ। ਸਾਡੀ <x> ਭਾਸ਼ਾ boloindia 'ਤੇ <y> ਦਰਜੇ 'ਤੇ ਹੈ। ਕੀ ਤੁਸੀਂ ਯੋਗਦਾਨ ਪਾ ਕੇ ਆਪਣੀ ਭਾਸ਼ਾ ਨੂੰ ਸਸ਼ਕਤ ਬਣਾਉਣਾ ਚਾਹੁੰਦੇ ਹੋ?",
-	"Help your own language": "ਆਪਣੀ ਖੁਦ ਦੀ ਭਾਸ਼ਾ ਦੀ ਮਦਦ ਕਰੋ",
+	"Help your own language": "ਤੁਹਾਡੀ ਆਪਣੀ ਭਾਸ਼ਾ ਲਈ ਮਦਦ",
 	"Report": "Report",
-	"Report Content": "Report Content",
-	"Help us understand what’s wrong with the sentence": "Help us understand what’s wrong with the sentence",
-	"Offensive": "Offensive",
-	"Hurting sentiments of religion, community or abusive content etc.": "Hurting sentiments of religion, community or abusive content etc.",
-	"Prohibited Content": "Prohibited Content",
-	"Hateful / Discriminatory / Vulgar language, drugs promotion etc.": "Hateful / Discriminatory / Vulgar language, drugs promotion etc.",
-	"Political Statement": "Political Statement",
-	"Hateful Political views, amplifying hate-speech etc.": "Hateful Political views, amplifying hate-speech etc.",
-	"Misinformation": "Misinformation",
+	"Report Content": "ਸਮੱਗਰੀ ਬਾਰੇ ਰਿਪੋਰਟ ਕਰੋ",
+	"Help us understand what’s wrong with the sentence": "ਸਾਨੂੰ ਸਮਝਣ ਵਿੱਚ ਮਦਦ ਕਰੋ ਕਿ ਵਾਕ ਵਿੱਚ ਕੀ ਗਲਤ ਹੈ",
+	"Offensive": "ਅਪਮਾਨਜਨਕ",
+	"Hurting sentiments of religion, community or abusive content etc.": "ਧਰਮ, ਸਮਾਜ ਦੀਆਂ ਭਾਵਨਾਵਾਂ ਨੂੰ ਸੱਟ ਮਾਰਦੇ ਜਾਂ ਨਿੰਦਾਪੂਰਨ ਸਮੱਗਰੀ ਆਦਿ",
+	"Prohibited Content": "ਪਾਬੰਦੀਸ਼ੁਦਾ ਸਮੱਗਰੀ",
+	"Hateful / Discriminatory / Vulgar language, drugs promotion etc.": "ਨਫ਼ਰਤ / ਪੱਖਪਾਤ / ਘਟੀਆ ਭਾਸ਼ਾ, ਨਸ਼ਿਆਂ ਦਾ ਪ੍ਰਚਾਰ ਆਦਿ",
+	"Political Statement": "ਰਾਜਨੀਤਿਕ ਬਿਆਨ",
+	"Hateful Political views, amplifying hate-speech etc.": "ਨਫ਼ਰਤ ਭਰੇ ਰਾਜਨੀਤਿਕ ਪੱਖ, ਪੱਖਪਾਤੀ ਨਫ਼ਰਤੀ-ਭਾਸ਼ਣ ਆਦਿ",
+	"Misinformation": "ਗ਼ਲਤ ਜਾਣਕਾਰੀ",
 	"Hearsay / Rumors, deliberate falsified facts etc.": "Hearsay / Rumors, deliberate falsified facts etc.",
 	"Thank You": "Thank You",
 	"Your feedback helps us keep the portal relevant to you, we appreciate you taking time to leave feedback for us.": "Your feedback helps us keep the portal relevant to you, we appreciate you taking time to leave feedback for us.",
-	"Congratulations!!! You have completed this batch of sentences": "Congratulations!!! You have completed this batch of sentences"
+	"Congratulations!!! You have completed this batch of sentences": "Congratulations!!! You have completed this batch of sentences",
+	"Select the language for voluntary contribution": "ਵਲੰਟੀਅਰ ਯੋਗਦਾਨ ਲਈ ਭਾਸ਼ਾ ਚੁਣੋ",
+	"Speak": "Speak",
+	"Validate What They Say": "ਪ੍ਰਮਾਣਿਤ ਕਰੋ ਕਿ ਉਹਨਾਂ ਕੀ ਕਿਹਾ ਹੈ",
+	"Help us by validating the recordings that others have contributed": "Help us by validating the recordings that others have contributed",
+	"Bolo India: A crowdsourcing initiative for Indian languages": "ਬੋਲੋ ਇੰਡੀਆ: ਭਾਰਤੀ ਭਾਸ਼ਾਵਾਂ ਲਈ ਇੱਕ ਕਰਾਊਡਸੋਰਸਿੰਗ ਪਹਿਲ",
+	"India needs to be Aatmanirbhar in the area of speech recognition in Indian languages.  Hence, we want to create an open data repository of many Indian voices. Bolo India invites you to volunteer contribute your voice for this cause.": "ਭਾਰਤ ਨੂੰ ਭਾਰਤੀ ਭਾਸ਼ਾਵਾਂ ਵਿੱਚ ਬੋਲੀ ਪਛਾਣ ਦੇ ਖੇਤਰ ਵਿੱਚ ਆਤਮ ਨਿਰਭਰ ਹੋਣ ਦੀ ਲੋੜ ਹੈ। ਇਸਕਰਕੇ ਅਸੀਂ ਕਈ ਭਾਸ਼ਾਵਾਂ ਵਿੱਚ ਆਵਾਜ਼ ਦਾ ਆਜ਼ਾਦ ਡਾਟਾ ਭੰਡਾਰ ਬਣਾਉਣਾ ਚਾਹੁੰਦੇ ਹਾਂ। ਬੋਲੋ ਇੰਡੀਆ ਤੁਹਾਨੂੰ ਇਸ ਮਕਸਦ ਲਈ ਆਪਣੀ ਆਵਾਜ਼ ਲਈ ਵਲੰਟੀਅਰ ਯੋਗਦਾਨ ਪਾਉਣ ਲਈ ਸੱਦਾ ਦਿੰਦਾ ਹੈ।",
+	"languages": "ਭਾਸ਼ਾਵਾਂ",
+	"Speakers": "ਸਪੀਕਰ",
+	"contributed data": "ਯੋਗਦਾਨ ਕੀਤਾ ਗਿਆ ਡਾਟਾ",
+	"months": "ਮਹੀਨੇ",
+	"years": "ਸਾਲ",
+	"India needs to be Atma Nirbhar in the area of speech recognition in Indian languages. Hence, we want to create an open data repository of many Indian voices. This is an effort by MeitY, Government of India, under the National Language Translation Mission (NLTM). This effort is supported by EkStep Foundation on a pro-bono basis and leverages its open source work under <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> along with various other open source frameworks.": "ਭਾਰਤ ਨੂੰ ਭਾਰਤੀ ਭਾਸ਼ਾਵਾਂ ਵਿੱਚ ਬੋਲੀ ਪਛਾਣ ਦੇ ਖੇਤਰ ਵਿੱਚ ਆਤਮ ਨਿਰਭਰ ਹੋਣ ਦੀ ਲੋੜ ਹੈ। ਇਸਕਰਕੇ ਅਸੀਂ ਕਈ ਭਾਸ਼ਾਵਾਂ ਵਿੱਚ ਆਵਾਜ਼ ਦਾ ਆਜ਼ਾਦ ਡਾਟਾ ਭੰਡਾਰ ਬਣਾਉਣਾ ਚਾਹੁੰਦੇ ਹਾਂ। ਕੌਮੀ ਭਾਸ਼ਾ ਅਨੁਵਾਦ ਮਿਸ਼ਨ (NLTM) ਅਧੀਨ MeitY, ਭਾਰਤ ਸਰਕਾਰ ਵਲੋਂ ਇਹ ਯਤਨ ਕੀਤਾ ਹੈ। ਇਹ ਯਤਨ ਨੂੰ ਏਕਸਟੈਪ ਫਾਊਂਡੇਸ਼ਨ ਰਾਹੀਂ ਪ੍ਰੋ-ਬੋਨੋ ਪੱਧਰ ਉੱਤੇ ਸਹਾਇਤਾ ਪ੍ਰਾਪਤ ਹੈ ਅਤੇ ਇਹ <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> along ਦੇ ਨਾਲ ਨਾਲ ਕਈ ਹੋਰ ਆਜ਼ਾਦ ਸਰੋਤ ਫਰੇਮਵਰਕ ਅਧੀਨ ਆਜ਼ਾਦ ਸਰੋਤ ਨੂੰ ਵਰਤਦਾ ਹੈ।",
+	"Bolo India invites you to volunteer and contribute your voice for this cause. All your contributions are automatically processed and made available as open data in a useful fashion back to the community. Such data then can be used by all language enthusiasts and technologists to develop world class speech recognition applications.": "ਬੋਲੋ ਇੰਡੀਆ ਤੁਹਾਨੂੰ ਵਲੰਟੀਅਰ ਵਜੋਂ ਅਤੇ ਇਸ ਮਕਸਦ ਵਾਸਤੇ ਆਪਣੀ ਆਵਾਜ਼ ਦੇਣ ਲਈ ਸੱਦਾ ਦਿੰਦਾ ਹੈ। ਤੁਹਾਡੇ ਸਾਰੇ ਯੋਗਦਾਨਾਂ ਉੱਤੇ ਆਪਣੇ-ਆਪ ਕਾਰਵਾਈ ਕੀਤੀ ਜਾਵੇਗੀ ਅਤੇ ਸਮਾਜ ਨੂੰ ਫਾਇਦੇਮੰਦ ਢੰਗ ਨਾਲ ਆਜ਼ਾਦ ਡਾਟੇ ਵਜੋਂ ਉਪਲੱਬਧ ਕਰਵਾਇਆ ਜਾਵੇਗਾ। ਇੰਝ ਡਾਟੇ ਨੂੰ ਸਾਰੇ ਭਾਸ਼ਾ ਉਤਸੁਕਾ ਅਤੇ ਤਕਨੀਕੀ ਮਾਹਰ ਵਲੋਂ ਸੰਸਾਰ ਭਰ ਵਿੱਚ ਸ਼ਾਨਦਾਰ ਬੋਲੀ ਪਛਾਣ ਐਪਲੀਕੇਸ਼ਨਾਂ ਬਣਾਉਣ ਲਈ ਵਰਤਿਆ ਜਾ ਸਕੇਗਾ।",
+	"India is a land of many languages, our digital strategy must reflect it.": "ਭਾਰਤ ਕਈ ਭਾਸ਼ਾਵਾਂ ਦੀ ਧਰਤੀ ਹੈ, ਸਾਡੀ ਡਿਜ਼ਿਟਲ ਕਾਰਜਨੀਤੀ ਇਹ ਦਰਸਾਉਂਦੀ ਹੋਣੀ ਚਾਹੀਦੀ ਹੈ।",
+	"90% of India's population uses region languages to conduct their day-to-day activities.": "ਭਾਰਤੀ ਆਬਾਦੀ ਦਾ 90% ਆਪਣੇ ਰੋਜ਼ਾਨਾ ਦੇ ਕੰਮਕਾਰ ਕਰਨ ਲਈ ਖੇਤਰੀ ਭਾਸ਼ਾਵਾਂ ਵਰਤਦੀ ਹੈ।",
+	"As more and more people use digital platforms for financial, educational and social activities, digital platforms must work seamlessly in Indian Languages.": "ਵਿੱਤੀ, ਸਿੱਖਿਆ ਤੇ ਸਮਾਜਿਕ ਸਰਗਰਮੀਆਂ ਲਈ ਵੱਧ ਤੋਂ ਵੱਧ ਲੋਕ ਡਿਜ਼ਿਟਲ ਮੰਚ ਵਰਤ ਰਹੇ ਹਨ, ਇਸਕਰਕੇ ਜ਼ਰੂਰੀ ਹੈ ਕਿ ਡਿਜ਼ਿਟਲ ਮੰਚ ਸਰਲ ਢੰਗ ਨਾਲ ਭਾਰਤੀ ਭਾਸ਼ਾਵਾਂ ਵਿੱਚ ਕੰਮ ਕਰਨ।",
+	"We need to build speech recognition technologies that are tuned for your language.  It must have high accuracy and understand the daily language and communications of people in your language.": "ਸਾਨੂੰ ਬੋਲੀ ਪਛਾਣ ਤਕਨੀਕਾਂ ਬਣਾਉਣ ਦੀ ਲੋੜ ਹੈ, ਜੋ ਕਿ ਤੁਹਾਡੀ ਭਾਸ਼ਾ ਲਈ ਮੁਨਾਸਬ ਹੋਵੇ। ਇਸ ਵਿੱਚ ਬਹੁਤ ਜ਼ਿਆਦਾ ਸ਼ੁੱਧਤਾ ਹੋਣੀ ਚਾਹੀਦੀ ਹੈ ਅਤੇ ਤੁਹਾਡੀ ਭਾਸ਼ਾ ਵਿੱਚ ਲੋਕਾਂ ਦੀ ਰੋਜ਼ਾਨਾਂ ਦੀ ਭਾਸ਼ਾ ਅਤੇ ਗੱਲਬਾਤ ਦੀ ਸਮਝ ਹੋਣੀ ਚਾਹੀਦੀ ਹੈ।",
+	"Having open world class speech recognition in your language will enable a digital first model in your language in various sectors such as: education, healthcare and media.": "ਤੁਹਾਡੀ ਭਾਸ਼ਾ ਵਿੱਚ ਸੰਸਾਰ ਪੱਧਰੀ ਬੋਲੀ ਪਛਾਣ ਨਾਲ ਕਈ ਖੇਤਰਾਂ ਵਿੱਚ ਤੁਹਾਡੀ ਭਾਸ਼ਾ ਵਿੱਚ ਪਹਿਲੇ ਡਿਜ਼ਿਟਲ ਮਾਡਲ ਨੂੰ ਸਮਰੱਥ ਕਰੇਗਾ, ਜਿਵੇਂ ਕਿ ਸਿੱਖਿਆ, ਸਿਹਤ-ਦੇਖਭਾਲ ਅਤੇ ਮੀਡੀਆ।",
+	"The tools, utilities and models  proposed to be developed in your language will rely on open source contributions through Bolo India crowd sourcing platform": "ਤੁਹਾਡੀ ਭਾਸ਼ਾ ਵਿੱਚ ਵਿਕਸਤ ਕਰਨ ਲਈ ਪੇਸ਼ ਕੀਤੇ ਗਏ ਟੂਲ, ਸਹੂਲਤਾਂ ਅਤੇ ਮਾਡਲ ਬੋਲੋ ਇੰਡੀਆ ਦੇ ਕਰਾਉਡ ਸੋਰਸ ਮੰਚ ਰਾਹੀਂ ਆਜ਼ਾਦ ਸਰੋਤ ਯੋਗਦਾਨ ਉੱਤੇ ਨਿਰਭਰ ਕਰਨਗੇ।",
+	"Speech recognition relies on \"machine-learning\" technology that requires large datasets that include diverse voices and the corresponding text. Through Bolo India, we want to create a diverse open repository of Indian voices speaking Indian languages which can be used for this initiative": "ਬੋਲੀ ਪਛਾਣ \"ਮਸ਼ੀਨ ਸਿਖਲਾਈ\" ਤਕਨੀਕ ਉੱਤੇ ਨਿਰਭਰ ਹੈ, ਜਿਸ ਲਈ ਵੱਡੀ ਮਾਤਰਾ ਵਿੱਚ ਡਾਟਾ-ਸਮੂਹ ਚਹੀਦੇ ਹਨ, ਜਿਸ ਵਿੱਚ ਵੱਖ-ਵੱਖ ਆਵਾਜ਼ਾਂ ਅਤੇ ਉਹਨਾਂ ਨਾਲ ਸੰਬੰਧਿਤ ਲਿਖਤ ਚਾਹੀਦੀ ਹੈ। ਬੋਲੋ ਇੰਡਿਆ ਰਾਹੀਂ ਅਸੀਂ ਭਾਰਤੀ ਭਾਸ਼ਾਵਾਂ ਵਿੱਚ ਭਾਰਤੀ ਆਵਾਜ਼ਾਂ ਦਾ ਵਿਭਿੰਨ ਆਜ਼ਾਦ ਭੰਡਾਰ ਬਣਾਉਣਾ ਚਾਹੁੰਦੇ ਹਾਂ, ਜੋ ਕਿ ਇਸ ਸ਼ੁਰੂਆਤ ਲਈ ਵਰਤਿਆ ਜਾ ਸਕਦਾ ਹੈ।",
+	"We are inviting you to join us and voluntarily contribute your voice to this initiative. Recording your voice at one stretch can be overwhelming hence you can do this by visiting the website multiple times and commence from where you left us off": "ਅਸੀਂ ਤੁਹਾਨੂੰ ਇਸ ਸ਼ੁਰੂਆਤੀ ਲਈ ਤੁਹਾਡੀ ਆਵਾਜ਼ ਰਾਹੀਂ ਸਾਡਾ ਵਲੰਟੀਅਰ ਤੌਰ ਉੱਤੇ ਸਾਥ ਦੇਣ ਲਈ ਸੱਦਾ ਦੇ ਰਹੇ ਹਨ। ਲਗਾਤਾਰ ਆਪਣੀ ਆਵਾਜ਼ ਰਿਕਾਰਡ ਕਰਨਾ ਅਕਾਉ ਹੋ ਸਕਦਾ ਹੈ, ਇਸਕਰਕੇ ਤੁਸੀਂ ਇਹ ਕਈ ਵਾਰ ਵੈੱਬਸਾਈਟ ਉੱਤੇ ਆ ਕੇ ਜਿੱਥੇ ਤੁਸੀਂ ਛੱਡਿਆ ਹੋਵੇ, ਉਥੋਂ ਕਰਨ ਸਕਦੇ ਹੋ।",
+	"Select a language": "ਇੱਕ ਭਾਸ਼ਾ ਚੁਣੋ",
+	"START CONTRIBUTING": "ਯੋਗਦਾਨ ਪਾਉਣਾ ਸ਼ੁਰੂ ਕਰੋ",
+	"Subject": "ਵਿਸ਼ਾ",
+	"Description": "ਵਰਣਨ",
+	"Please type here...": "ਇੱਥੇ ਲਿਖੋ ਜੀ",
+	"Failed to submit the feedback. Please try again.": "ਸੁਝਾਅ ਭੇਜਣ ਲਈ ਅਸਫ਼ਲ ਹੈ। ਮੁੜ ਕੋਸ਼ਿਸ਼ ਕਰੋ।",
+	"SUBMIT": "ਭੇਜੋ",
+	"Thank You for your valuable feedback": "ਤੁਹਾਡੇ ਕੀਮਤੀ ਸੁਝਾਅ ਲਈ ਤੁਹਾਡਾ ਧੰਨਵਾਦ ਹੈ",
+	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback": "ਤੁਹਾਡੇ ਸੁਝਾਅ ਬੋਲੋ ਇੰਡੀਆ ਨੂੰ ਢੁੱਕਵਾਂ ਬਣਾਉਣ ਲਈ ਮਦਦ ਕਰਦੇ ਹਨ, ਅਸੀਂ ਸੁਝਾਅ ਦੇਣ ਲਈ ਤੁਹਾਡੇ ਟਾਈਮ ਕੱਢਣ ਦੀ ਸ਼ਲਾਘਾ ਕਰਦੇ ਹਾਂ।",
+	"Back to Home": "ਵਾਪਸ ਹੋਮ ਤੇ ਜਾਓ",
+	"Please speak clearly": "ਸਪਸ਼ਟ ਬੋਲੋ ਜੀ",
+	"Low/No Background Noise": "ਬੈਕਗਰਾਊਂਡ ਰੌਲਾ ਘੱਟ/ਨਹੀਂ ਹੈ",
+	"Background Noise Detected": "ਬੈਕਗਰਾਊਂਡ ਵਿੱਚ ਰੌਲਾ ਖੋਜਿਆ ਗਿਆ",
+	"Ambience noise detected": "ਮਾਹੌਲ ਵਿੱਚ ਰੌਲਾ ਖੋਜਿਆ ਗਿਆ",
+	"Please specify the reason (Optional)": "ਕਾਰਨ ਦਿਓ ਜੀ (ਮਨਮਰਜ਼ੀ ਮੁਤਾਬਕ)",
+	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback.": "Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback.",
+	"Congratulations!!! You have completed this batch of sentences": "ਵਧਾਈਆਂ!!! ਤੁਸੀਂ ਵਾਕਾਂ ਦਾ ਇਹ ਸਮੂਹ ਪੂਰਾ ਕਰ ਲਿਆ ਹੈ",
+	"social sharing text with rank": "ਮੈਂ http://boloindia.nplt.in ਰਾਹੀਂ ਭਾਰਤ ਲਈ ਆਜ਼ਾਦ ਭਾਸ਼ਾ ਭੰਡਾਰ ਬਣਾਉਣ ਵਾਸਤੇ ਯੋਗਦਾਨ ਪਾਇਆ ਹੈ। ਤੁਸੀਂ ਤੇ ਮੈਂ ਰਲ ਕੇ ਆਪਣੀਆਂ ਆਵਾਜ਼ਾਂ ਦਾ ਦਾਨ ਦੇ ਕੇ ਮਦਦ ਕਰ ਸਕਦੇ ਹਾਂ ਤਾਂ ਕਿ ਸਾਡੀ ਭਾਸ਼ਾਂ ਵਿੱਚ ਮਸ਼ੀਨ ਸਿਖਲਾਈ ਵਾਸਤੇ ਮਦਦ ਹੋਵੇ। ਬੋਲੋ ਇੰਡੀਆ ਉੱਤੇ ਸਾਡਾ %language ਭਾਸ਼ਾ ਦਰਜਾ %rank ਹੈ। ਆਪਣਾ ਹਿੱਸਾ ਪਾਉਣਾ ਤੇ ਭਾਸ਼ਾ ਨੂੰ ਮਜ਼ਬੂਤ ਕਰਨਾ ਹੈ?",
+	"social sharing text without rank": "ਮੈਂ http://boloindia.nplt.in ਰਾਹੀਂ ਭਾਰਤ ਲਈ ਆਜ਼ਾਦ ਭਾਸ਼ਾ ਭੰਡਾਰ ਬਣਾਉਣ ਵਾਸਤੇ ਯੋਗਦਾਨ ਪਾਇਆ ਹੈ। ਤੁਸੀਂ ਤੇ ਮੈਂ ਰਲ ਕੇ ਆਪਣੀਆਂ ਆਵਾਜ਼ਾਂ ਦਾ ਦਾਨ ਦੇ ਕੇ ਮਦਦ ਕਰ ਸਕਦੇ ਹਾਂ ਤਾਂ ਕਿ ਸਾਡੀ ਭਾਸ਼ਾਂ ਵਿੱਚ ਮਸ਼ੀਨ ਸਿਖਲਾਈ ਵਾਸਤੇ ਮਦਦ ਹੋਵੇ। ਆਪਣਾ ਹਿੱਸਾ ਪਾਉਣਾ ਤੇ ਭਾਸ਼ਾ ਨੂੰ ਮਜ਼ਬੂਤ ਕਰਨਾ ਹੈ?"
+
 }
