| Priyanshu | fix translation in Assamese (feedback thankyou msg)

--- a/locales/as.json
+++ b/locales/as.json
@@ -146,7 +146,7 @@
 	"We have recently commenced the data contribution journey for <span id=\"spn-validation-language\"></span> language and hope that very soon there will be voice samples collected for your validation.": "আমি ইতিমধ্যে <span id=\"spn-validation-language\"></span> ভাষাৰ বাবে তথ্য যোগান পক্ৰিয়া আৰম্ভ কৰিছোঁ, আৰু আশা কৰিছোঁ সোনকালেই কন্ঠৰ নমুনা সংগ্ৰহ পক্ৰিয়াই বৈধতা লাভ কৰিব।",
 	"Would you also like to contribute your voice?": "আপোনাৰ কণ্ঠৰ অৱদান দিব বিচাৰে নেকি?",
 	"Start Contributing": "যোগদান আৰম্ভ কৰক",
-	"Thank you for validating!": "বৈধতা নিৰূপণৰ বাবে ধন্যবাদ",
+	"Thank you for validating!": "বৈধতা নিৰূপণৰ বাবে ধন্যবাদ!",
 	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "ৈধতা প্ৰদান কৰি আপুনি আমাক সহায় কৰিলে <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> ৰেকৰ্ডিংৰ\"X\"",
 	"Validate More": "বেছি বৈধ",
 	"Validating Instructions": "বৈধতাৰ নিয়মাৱলী",
@@ -268,7 +268,7 @@
 	"Speech recognition relies on \"machine-learning\" technology that requires large datasets that include diverse voices and the corresponding text. Through Bolo India, we want to create a diverse open repository of Indian voices speaking Indian languages which can be used for this initiative": "ভাষণ চিনাক্তকৰণ \"মেচিন লাৰ্নিং\" প্ৰযুক্তিৰ ওপৰত নিৰৰ্ভশীল সেয়েহে ইয়াত এক বৃহৎ সংখ্যক ডাটাচেট লাগে, য'ত বিভিন্ন ভাৰতীয় ভাষাৰ কন্ঠ আৰু পাঠ্য দুয়োটাই অন্তৰ্ভূক্ত হৈ থাকে। বোলো ইণ্ডিয়াৰ যোগেদি, একষ্টেপে এনেকুৱা বিবিধ কথিত ভাৰতীয় ভাষাৰ মুক্ত উৎস সৃষ্টি কৰিব বিচাৰিছে যিটো নেকি উদ্যোক্তাসকলৰ লগতে আনেও এই পদক্ষেপত ব্যৱহাৰ কৰিব পাৰিব।",
 	"We are inviting you to join us and voluntarily contribute your voice to this initiative. Recording your voice at one stretch can be overwhelming hence you can do this by visiting the website multiple times and commence from where you left us off": "আমি আপোনাক আমাৰ সৈতে যোগদান কৰিবলৈ আমন্ত্ৰণ কৰি আছো আৰু স্বেচ্ছায়ে এই উদ্যোগত আপোনাৰ কণ্ঠস্বৰৰ অৰিহণা বিচাৰিছো। একে গতিত সম্পূৰ্ণভাৱে আপোনালোকৰ কন্ঠ ৰেকৰ্ড কৰাটো আপোনালোকৰ বাবে অত্যাধিক যেন লাগিব পাৰে সেয়েহে, আমি আমাৰ ৱেবচাইটত ক্ষুদ্ৰ ভাগত বিভক্ত কৰাৰ উপায় কৰি ৰাখিছোঁ, যাতে আপোনালোকে একাধিকবাৰ দৰ্শন কৰিব পাৰে আৰু যিখিনিত এৰি গৈছিল তাৰ পৰা আকৌ আৰম্ভ কৰিব পাৰে।",
 	"Thank You": "আপোনাক ধন্যবাদ জনাইছো",
-	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback.": "आपला अभिप्राय आम्हाला \"बोला भारत\" ला तुमच्यासाठी उपयोगी बनविण्यासाठी मदत करतो, तुम्ही तुमच्या वेळेत वेळ काढून आम्हाला आपला अभिप्राय दिल्याबद्दल आम्ही तुमचे कौतुक करतो.",
+	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback.": "আপোনাৰ মতামতে বোলো ইণ্ডিয়াক প্ৰাসংগিক কৰি ৰখাত সহায় কৰে, মতামতৰ বাবে দিয়া সময়খিনিৰ বাবে আমি আপোনাক প্ৰশংসা কৰোঁ।",
 	"Most Contributed - <span id=\"languageId\"></span>": "সৰ্বাধিক অৱদান - <span id=\"languageId\"></span>",
 	"Thank you for your enthusiasm to validate the recordings.": "বাণীবদ্ধবোৰ বৈধকৰণ কৰিবলৈ আপোনাৰ উৎসাহৰ বাবে আপোনাক ধন্যবাদ।",
 	"We do not have any data in <span id=\"spn-validation-language\"></span> language. Please try again later.": "আমাৰ <span id=\"spn-validation-language\"></span> ভাষাত কোনো তথ্য নাই। অনুগ্ৰহ কৰি পিছত পুনৰ চেষ্টা কৰক।",
